--- a/data/nlu/contact_info.yml
+++ b/data/nlu/contact_info.yml
@@ -238,9 +238,19 @@ nlu:
 
   - intent: 常用联系方式/其他
     examples: |
+      - [材料学院](department)王院长的接访时间
+      - 各科老师办公室和开放时间可以在内部网查到吗
+      - [法学院](department)院办的办公时间
+      - 电话
+      - [传播学院](department)教务处在哪个办公室
+      - 办公室老师工作时间
+      - [计算机与软件学院](department)教师接访时间表
+      - 请问[医学院](department)的教学秘书处在哪里
+      - 老师信息
       - 常用联系方式
       - 校内常用联系方式
       - 教学秘书
       - 想问一下[管院](department)关于选课的老师的办公室和电话
       - 你好，我想咨询[心理学院](department)办秘书的工作地点和工作时间，想要找老师加位
+      - 联系辅导员
 
