--- a/data/nlu/dormitory.yml
+++ b/data/nlu/dormitory.yml
@@ -103,6 +103,9 @@ nlu:
 
   - intent: 宿舍服务/其他
     examples: |
+      - 住宿证明
+      - 第二批毕业生最晚什么时候退宿
+      - 入伍后住宿费只退了一部分
       - 宿舍服务相关问题
       - 请问西丽宿舍用电功率限制是怎么样的
       - 经管法搬校区之后能否调宿舍？
