--- a/data/nlu/employment_guidance.yml
+++ b/data/nlu/employment_guidance.yml
@@ -147,6 +147,10 @@ nlu:
 
   - intent: 就业指导/其他
     examples: |
+      - 创业
+      - 报到证
+      - 求职创业补贴
+      - 关于求职创业补贴
       - 就业指导相关问题
       - 家庭困难就业补贴
       - 毕业生就业推荐表填写
