--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -21,7 +21,7 @@ nlu:
       - 研究生奖助体系
       - 硕士奖学金
       - 博士奖学金
-      - 研究生奖学金
+      - 研究生奖学金有哪些
 
   - intent: 研究生招生/非全日制硕士招生信息
     examples: |
@@ -40,12 +40,15 @@ nlu:
 
   - intent: 研究生招生/其他
     examples: |
+      - 研招网上的考生信息填写中的“符合报考条件的最后学历毕业专业”，没有“微电子科学与工程”专业，应该怎样填写。
+      - 考生档案所在单位名称和地址（详细到门牌号），应该怎样填写。
+      - 哪里有学术型硕士研究生毕业要求的详细说明？具体发几篇文章、期刊的标准，还有作者的排序之类的
+      - 学生档案所在单位是填学院吗？
+      - 材料与环境工程专业的研究生好不好考，好不好调剂，有哪些方向
+      - 绩点浮动仅能用作研究生面试资格竞选吗？
+      - 请问下保研需要自己提交申请表吗？还是学院会通知
+      - 研究生报考
       - 研究生招生相关问题
-      - 研究生学业奖学金和优秀研究生干部奖学金什么时候发放呢
-      - 研究生学业奖学金还有吗？
-      - 研究生学业奖学金发放时间
-      - 研究生学业奖学金证书
-      - 博士新生助学金
       - 《深圳大学推荐免试攻读硕士学位研究生资格申请表》
       - 推免面试工作
       - 关于推免生资格申请
