--- a/data/nlu/library.yml
+++ b/data/nlu/library.yml
@@ -176,6 +176,7 @@ nlu:
 
   - intent: 图书馆服务/其他
     examples: |
+      - 南图机房如果用了超过4小时怎么收费？
       - 图书馆服务相关问题
       - 图书馆相关问题
       - 暑期图书馆开放时间
@@ -186,7 +187,6 @@ nlu:
       - 图书馆北馆开冷气冻死人
       - 图书馆空调
       - 图书馆WiFi
-      - 在图书馆无法连接校内网
       - 图书馆数据导出问题
       - 南图书馆
       - 图书馆资源里的电子外文期刊
@@ -195,7 +195,6 @@ nlu:
       - 图书馆空调问题
       - 关于图书馆刷卡进馆的问题
       - 图书馆暑假是否开放
-      - 今天补办了校园卡，但是刷不了图书馆门禁怎么回事
       - 申请查看图书馆的监控录像
       - 图书馆是有提供学生扫描服务吗
       - 请问图书馆暑假是否开放？如果可以开的话，如何预约呢？谢谢。
@@ -250,6 +249,5 @@ nlu:
       - 关于图书馆刷卡进馆的问题
       - 请问可以增加刷脸或刷校园码进馆的途径吗?久久一次忘记带卡，又住南区，走回去拿一来一回很花时间
       - 校友证能去图书馆借书吗
-      - 交医保的网站打不开
       - 电脑用的是宿舍的网线，交医保的网站一直打开是空白，
 
