--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -67,6 +67,362 @@ nlu:
 
   - intent: 后勤服务/其他
     examples: |
+      - 体测完了 但是忘了交表怎么办
+      - 可以补交体测表吗
+      - 到哪补交体测表
+      - 体育场馆预约系统是只能预定当天的票吗？
+      - 体育场馆当天的票最早几点可以在系统内预定呢？
+      - 需要学校开具无犯罪证明，应该由哪个部门开具呢
+      - 无犯罪证明
+      - 可以借用文科类的长椅吗？
+      - 去武装部申请免训时能否让同学带齐相关资料代为申请？还是一定要本人去申请呢？
+      - 医学部毕业需要多少义工时
+      - 用车申请表在线上哪里可以下载？
+      - 深大抬头信纸的电子版能在哪里下载到
+      - 荔园晨风
+      - 办居住证
+      - 疫情期间在小区做义工，盖了物业的章，也有照片证明，可以认定吗
+      - 第二批毕业生离校时间
+      - 申请停车位
+      - 学生新能源私家车能否在学校申请停车位
+      - 常规办理身份证（非迁户）应该去深大哪里？
+      - 户籍可归还时间以及地点
+      - 一定要足够义工时才能毕业吗？
+      - 借桌椅
+      - 请问深大logo在哪里下载呢？
+      - 洗衣机进水管进不了水。
+      - 在深圳义工报名参加义工，可以算在校内义工时吗
+      - 计算机楼是哪一栋
+      - 空调过滤网的拆洗需要找谁呢
+      - 想清洗一下空调过滤网
+      - 计划财务部工作时间是几点到几点呢
+      - 创建一个社团要怎么做，有哪些要求
+      - 在哪里可以查询到学校有哪些考试、哪些教室不能借用？
+      - 大二由于身体原因没有参加体侧（无假条）要以什么方式进行补测呢？要和哪里联系呢？
+      - 绿屋
+      - 饭堂
+      - 通勤车
+      - 粤海校区到丽湖校区的校车在哪个地方坐？
+      - 提前体测
+      - 我们学院体测时间在下周，但我下周没时间，这周先去体测有影响吗
+      - 请问张贴的海报尺寸是不是只能是0.6*0.9的？
+      - 购买仪器耗材，请问单价超过多少需要报固定资产
+      - 学生学校劳动收入收税
+      - 想在假期期间借教室请问怎么办理呢
+      - 今年可以寒假提前回校吗
+      - 寒假能不能留校
+      - 今天没买军训服还有机会买吗
+      - 去广州要向学校报备吗？需要什么手续吗？
+      - 中国经济特区研究中心在哪里呢？
+      - 可以调学校的监控吗
+      - 在家乡附近做义工时可以算入深大的义工时里面吗？
+      - 洗星湾有蛇
+      - 桌球
+      - 从内部网深大义工里下载的word版本的义工时证明要去哪里盖章？
+      - 基层班级服务时数是什么呢？需要怎么获得呢？在哪里可以查看自己的时数呢？
+      - 元平体育馆大屏幕的规格（尺寸、画幅的比例都可以）
+      - 完成了所有期末考试内容可以提前离校回家吗？
+      - 考试周机房会开放吗，有哪些机房，开放时间具体是什么时候
+      - 毕业对学生义工时有要求吗？
+      - 法务援助
+      - 希望能在院办处借实验室或其他办公场所打比赛，请问应该怎么做，联系谁？
+      - 有没有什么公众号或者网址可以提前看到哪间活动室在什么时间段被别人借去？
+      - 能否让校园巴士司机到站前报一下站，或者问一下xx站有没有下？一半的司机都不报站，甚至到站都不停车直接开过去，去不熟的地方经常坐过站
+      - 校园巴士
+      - 户籍室在哪
+      - 丽湖校区惟新门和学术交流中心在哪
+      - 棋牌室
+      - 我在深圳义工官网上报名了义工活动并且参加了活动，在官网上具有参加参加记录的证明，这些义工时可以录入我们学校的义工时系统吗，要怎么操作呢？
+      - 朗读背诵教室的地址
+      - 优秀防疫志愿者
+      - 校友现在能进入学校吗
+      - 西南餐厅丢失财物
+      - 丢失财物
+      - 如果没办法及时回去参与体测，是否有其他弥补方式或者需要出示哪些证明呢？
+      - 丽湖校区体质检测中心的位置以及工作时间
+      - 请问一下21级材料学院研究生新生荔研背包什么时候发放？
+      - 荔研背包
+      - 请问深圳大学宣传部在哪里，后海吗，西丽有没有分部？
+      - 学生信息变更系统什么时候开放
+      - 今年还有运动会吗？
+      - 粤海校区的邮局在哪呢？或者收发室在哪呢？寄来的信件现在不知道在哪个地方了。
+      - 学校邮局和收发室
+      - 为了办理深圳居住证，需要学校作为申报义务人申报居住登记，哪里负责申报居住登记呢？
+      - 参加校内志愿活动后的劳务费是什么
+      - 今年错过了义工联报名，不知明年大二还可以申请加入吗
+      - 大二还可以申请加入义工联吗
+      - 元旦具体的放假调休什么的安排
+      - 请问有社团派发传单的申请表吗"
+      - 学活开门时间段
+      - 外卖被偷该如何查监控
+      - 课室管理员
+      - 学校荔天饭堂卫生不好
+      - 义工时有什么用吗？
+      - 本科毕业有要求义工时时长吗？
+      - 考研需要参考义工时吗？
+      - 通勤车
+      - 实验服
+      - 预约体育场馆的支付密码是什么？
+      - 学校餐厅卫生
+      - 深大义工
+      - 报道证过了有效期限后该如何申请迁回原籍？
+      - 暑假还可以做研究生三助一辅吗？
+      - 求运行于丽湖和粤海之间的校巴的时间、地点。
+      - 校巴
+      - 麻烦可以把学校内坏的车清走吗？每次想扫个车都是坏的。
+      - 共享单车
+      - 校内有配钥匙的嘛
+      - 配钥匙
+      - 请问退伍兵是否不需要体测，如何申请免测。
+      - 身份证丢了，新的还未办好，怎么参加体测？
+      - 体测数据
+      - 大三的时候错过了体测，会延毕吗，还能怎么补救
+      - 食堂旁边的ATM机能办理现金业务吗？
+      - 机房在哪里啊，还有问问开放时间，公文通里没找到
+      - 机房在哪里还有开放时间
+      - 前几天不是疫情闭馆了吗，取消预约体育经费不退的嘛？
+      - 请问大概要什么时候才可以堂食呀，已经是线下上课了。
+      - 堂食
+      - 快递仅限顺丰，京东，极兔，能够在南区菜鸟驿站拿取，这合理么！
+      - 快递收放
+      - 出校
+      - 本人3月份入伍，5月份舍友帮忙提交了退宿申请，现在退宿费只退了400多，当时交了750，请问如何退完全
+      - 关于第二批毕业生办理退宿问题
+      - 第二批毕业生在办事大厅没有找到学生离校系统，请问还能不能在7月6号前办理退宿吗？如若不能，能否委托他人办理退宿？
+      - 丽湖校区从风信子7楼要搬到胡杨林，能否确定到底什么时候搬？5号通知说搬过去，箱子都装好了结果胡杨林毕业生走都还没走，现在又一拖再拖，能不能给个准信？今天8号问又说没打扫搬不了，马上暑假了都，别放假人都走了又通知要搬搬搬
+      - 我是法学院研究生，今年延期毕业了，请问现在要和其他毕业生一起办理退宿吗？
+      - 你好，我早上有洗澡的习惯发现没有热水供应，所以想咨询一下丽湖校区洗澡热水供应时间，谢谢！
+      - 请问新斋楼下对面的绿屋回收什么时候有工作人员进行回收纸箱、塑料瓶？
+      - 空调拆洗
+      - 因为银行卡问题，上个学期住宿费没退成功，应该怎么办
+      - 请问没有住宿需求，这个学期不需要住学校的同学能否当天注册，当天离校？
+      - 住宿系统安排
+      - 住宿系统是先安排新生然后再到老生吗
+      - 现在大四了，想暑期回学校考研和做毕设，家庭条件不是很好，所以无法在外租房为自己提供环境，想请问学校是否能够给学生提供住宿呢？非常迫切，本人是西丽的学生，西丽人员稀少，考虑这方面，希望学校能够考虑一下，谢谢！
+      - 学校发布了退住宿费的通知，我想请问5.18返校的第一批研究生算短期返校不，能全额退还住宿费吗
+      - 请问学杂费什么时候会扣除？目前为止还没有能够去学校的通知，请问住宿费还是按照原来的标准扣除吗？
+      - 7月份左右从桂庙搬到南区，后从南区搬到蓬莱。11月21号，蓬莱宿管给我送上来个欠费单，说我没有交桂庙的水电费。。。。毕竟时间过去很久了，自己也不太清楚了。想问一下去哪里可以查
+      - 理工楼L3研究生成绩打印机没有打印纸了，应该找谁解决问题？物业说不归她们管
+      - 军训学分成绩
+      - 现在持有校友卡能不能进校？
+      - 来往粤海丽湖校区的通勤车中秋假期期间正常工作吗？
+      - 来往粤海丽湖校区的通勤车中秋假期期间正常工作吗？每天开车的时间是什么时候呢？在哪里上车？
+      - 军训
+      - 我是大一学生，我想知道自己军训是否合格，是否需要缓训，可以在哪咨询？
+      - 迁户口
+      - 大一新生入学后还有迁户口到深圳的机会吗，如果有，该怎么做
+      - 想把学校的集体户口迁回原住地，要求有学校出具的全日制在校就读证明，请问哪里可以办理？
+      - 我这边因为留学有一些资料需要盖公章，时间也比较紧张，想请问什么人工盖章可以恢复服务
+      - 元平体育馆横幅
+      - 由于在元平足球场开展活动，需要悬挂横幅，想知道申请流程和悬挂要求
+      - 粤海的体测中心在什么位置
+      - 丽湖校区的回家可以过夜吗
+      - 体育场馆退费
+      - 昨天预约了壁球场地，但因为疫情没开放，是用体育经费交的，哪里退费呢？
+      - 机房
+      - 沧海校区有存钱的ATM机吗
+      - 如何预约健身房
+      - 丽湖校区有失物招领处吗？
+      - 钥匙不见了
+      - 深大抬头信纸
+      - 如何找到学校抬头的信纸并进行打印
+      - 请问哪里有卖深大抬头信纸的
+      - 社团带队教师
+      - 田径场开放时间
+      - 由于新生在元平军训九点多才放，但是田径场开放时间还是十点。所以大多数人的跑步时间被压缩了，能否向学校建议延长体育馆开放时间呢，我记得有一段时间田径场开放是到11点的呀
+      - 预定体育场馆
+      - 网上办事大厅没有体育场馆预约应用 本人之前是休学现已复学
+      - 请问有创盟咨询群或者创业园咨询群吗
+      - 丽湖场地申请及宣传品张贴申请
+      - 丽湖校区场地申请表及宣传品张贴申请表
+      - 申请可供社团长期使用的仓储室
+      - 由于长期赛事活动需要，需要申请可供社团长期使用的仓储室
+      - 本人没有入团，但是个人信息页面政治面貌被标了共青团员，系统需要我办理团组织关系转接，要如何处理离校申请？以及如何把政治面貌修改成群众？
+      - 想问下，现在从低风险地区返校，还需集中隔离三天吗
+      - 三助一辅
+      - 学生离校
+      - 办事大厅没有学生离校系统，是因为不是第一批毕业生的原因吗？请问第二批毕业生名单什么时候出来呢？要一直等到第二批名单出来后才可以办理离校吗？
+      - 场地（器材）使用
+      - 粤海石头坞那儿的排练室（黄色集装箱）怎样才能使用呀？是乐队专属的嘛？（如果非乐队成员想要进去玩，怎样才能联系到乐队负责人？）
+      - 户籍迁移
+      - 请问深大义工联人力资源部在哪里呀？我想去办理义工时证明
+      - 预约体育场馆
+      - 外省返深后，在深的三天三检
+      - 您好，请问我原先的实验服搞丢了，我自己想买一件实验服去哪里购买？
+      - 游泳池开放时间
+      - 想咨询一下粤海海边游泳池开放时间，丽湖的游泳池好像已经开放好久了
+      - 出校门
+      - 现在出校门要申请吗？怎么申请？
+      - 游泳馆开放时间
+      - 请问游泳馆什么时候开放
+      - 请问校内学生交通工具规定在哪可以看
+      - 在荔天饭堂三楼 三及第汤窗口点的粉里有很多虫
+      - 学活开放时间
+      - 学活什么时候开门
+      - 学活开门时间
+      - 想问一下学生事物中心工作日的开放时间
+      - 军训服处理
+      - 请问军训服后续怎么处理呢？有哪里可以回收军训服吗？军训服可以捐吗？
+      - 寒假留校
+      - 你好，想问一下学校的寒假留校政策出了吗？
+      - 军训器件体育馆开放问题
+      - 军训期间所有体育馆暂停使用，晨练时间是否可以使用体育馆，
+      - 外卖被偷
+      - 丽湖校区的同学需到粤海校区参加考试，请问到时候学校会有通勤车吗？
+      - 大一军训
+      - 我是21级的大一新生，想问一下在军训期间可以请假吗，因为那个时间段在军训快结束的那一两天刚好有别的事情要离开深圳，不军训完会有什么影响吗？
+      - 羽毛球提前进场
+      - 丽湖校区健身房预约
+      - 我怎么才能给给学校发建言献策
+      - 学校哪里可以帮学生申报居住登记？
+      - 学校有琴房练习古筝吗
+      - 学校摆摊
+      - 我们社团要举办一个活动，需要进行线下宣传，想要申请场地摆个小摊，请问需要怎么做，需要向什么部门申请或者是报备
+      - 请问粤海校区的同学这边体测结束了可以到丽湖校区体测吗？本来这周要去的，但是感冒了
+      - 学生组织想要在斋区活动室办活动，请问如何预约？
+      - 学生组织想要在斋区活动室办活动，请问如何预约？ 之前是可以找负责人预约，但是负责人搬去丽湖了。学校3月份弄得活动室预约的网站也用不了了。请问现在想要预约活动室找哪位老师？具体预约的步骤是什么？
+      - 关于丽湖校区体质检测中心的位置以及工作时间
+      - 进出校园
+      - 朗读背诵教室安排
+      - 棋牌室在哪里呀 （游泳馆二楼的游泳馆是指哪个游泳馆）
+      - 如何预约课室
+      - 丽湖校区研究生社团申请会议室或教室
+      - 研究生社团，因社团活动需要，应该怎么申请丽湖校区的会议室或教室呢？
+      - 体育场馆线上预约支付不了
+      - 返校后周末能出省吗？
+      - 想请问户籍室在哪
+      - 一期活动室
+      - 学生想借场地打比赛应该怎么做？
+      - 请问目前管理学院搬到西丽校区后，学生退学在哪里领取档案呢？ 另外因为学生本人在国外，学生父母如何代领档案？
+      - 关于租借场地
+      - 院级的入学教育需要租借场地，请问在哪可以申请？
+      - 请问学校有法务部门 可以给学生提供咨询和援助的吗 有的话要联系哪里呢
+      - 校区往返校车
+      - 搬校区后两个校区往返的校车一天几趟 在哪里乘坐
+      - 毕业生离校需要申请出校审批吗
+      - 暑假离校问题
+      - 暑假进出学校事宜
+      - 请问考完试能够离校几天，然后再回学校吗？到时候想留校要怎么办？
+      - 校外人员进校
+      - 老师您好，临近毕业，由于毕业典礼学院视频制作的需要，视频制作方需要入校采景及拍摄，请问入校审批的流程是什么样的呢，感谢您的解答
+      - 元平体育馆内大屏幕咨询
+      - 毕业生开车进校搬行李
+      - 请问应届毕业生现在能开车进学校搬行李吗？东西太多了，六个纸箱，两个皮箱。没有车真的带不走
+      - 毕业生的家人进校拍照问题
+      - 我是今年毕业的学生，请问学校什么时候能让毕业生的家人朋友进校拍毕业照？怎么申请？
+      - 练琴
+      - 有非音乐专业学生练琴的地方吗
+      - 五一放假安排
+      - 请问可供朗读背诵的教室安排
+      - 进校
+      - 听荔食堂的照片
+      - 校外人员如何申请入校
+      - 仪器故障，为仪器工程师申请入校上门维修仪器
+      - 请问学校的桌球室在哪里
+      - 请问清明节放假时间和安排
+      - 斋区活动室
+      - 斋区楼下活动室（乐器房等）什么时候开放？怎样预约呢？
+      - 教室借用
+      - 师院琴房预约
+      - 请问师院的琴房怎么预约呢？
+      - 学生工作办公室饮水机维修
+      - 在丽湖校区哪里可以盖证明学籍的学校公章
+      - 寒假快递点安排
+      - 请问深大后海校区的快递点在寒假的开放时间段？
+      - 军训结束后，体育场馆开放时间
+      - 请问军训结束后，体育场馆有没有开放晨练？
+      - 寒假离校问题
+      - 19级老生20号考完可以申请离校回家吗，广东省内的
+      - 外卖被偷了
+      - 军训结营问题
+      - 请问军训是29号上午结营，下午可以走还是29号下午才结营？
+      - 您好，请问今年寒假是否可以留校，因为有实习所以想住在学校，此外寒假学校是否有食堂开放
+      - 元旦离深
+      - 假期可以留校吗
+      - 寒暑假是否可以留校
+      - 助力车进校园
+      - 符合新国标标准的助力折叠车可以开进校园吗？就是那种符合国家标准允许上路的助力车
+      - 元平舞蹈室
+      - 请问元平舞蹈室周五和周末晚上开放申请吗
+      - 关于寒假留校
+      - 校外人士进校参观
+      - 请问近期会开放学校，允许校外人士参观吗？
+      - 海报张贴
+      - 请问蒙山老师的无人机实验室具体位置在哪里？
+      - 20级毕业生想回学校办事
+      - 您好，想了解一下20级毕业生想回学校办事，需要办什么手续呢？后海和丽湖的手续相同吗？谢谢
+      - 《深圳大学学生活动场地申请使用指引》
+      - 请问，《深圳大学学生活动场地申请使用指引》文件在哪里呢？
+      - 校外人员现在是否可以进校
+      - 请问班级的心理委员可以获得基础义工时吗？
+      - 请问基层服务义工时，除了担任班干部以外，还有什么渠道可以获得呢
+      - 学生车辆能否登记
+      - 请问学生车辆能否登记为校内车辆？若不能请问如何申请临时进校？车辆进校有哪些注意事项？谢谢
+      - 提前点饭
+      - 星期一至星期五在教工餐厅提前点饭的可以进的了教工餐厅拿吗？在线等急！
+      - 学校往年寒假留校情况是怎样的？能否在一月之前发布通知？不然的话，北方孩子想回也回不去了
+      - 场地申请
+      - 想要申请文科楼草坪作为一个户拓活动的场地，该向哪里申请
+      - 请问哪里能看到财务部对于社团申请经费用品的具体规定啊
+      - 寒假以及军训时间
+      - 想请问一下大一新生的军训以及放假时间安排有了吗
+      - 教室申请
+      - 需要教室申请，已经申请了但是审核很慢，但是又比较着急，我该联系谁？
+      - 学校钢琴室怎么使用
+      - 请问学校钢琴室怎么使用？在哪里预约呢？
+      - 查询各教学场地的考试安排
+      - 关于社团创建相关事务
+      - 落东西在H6-402（管理学院实验室）
+      - 非本校人员进出校门咨询
+      - 亲戚开车车辆过来是否能进校？
+      - 麻烦回复一下工作日和工作时间
+      - 计算机楼
+      - 汇元楼二楼教务部今天开门吗？虽然是周日但今天补课
+      - 关于2020级新生进出校园的咨询
+      - 汇元楼二楼教务部周末开门吗
+      - 能在北区游泳馆游泳的要求
+      - 国庆需要出省（去非中高风险地区）该如何申请及向谁申请？
+      - 安装洗衣机
+      - 西门的单车
+      - 寒假的时候放了单车在西门旁边，现在发现找不到了，请问要到哪里找以及联系哪些人
+      - 维修
+      - 可否让校外的维修师傅进学校维修？
+      - 可以在学校骑小米电动滑板车吗
+      - 可以在学校骑小米电动滑板车吗 住南区天天在文科楼上课 想买辆电动滑板车
+      - 今年国庆放假能回家吗
+      - 返校学生出校的问题
+      - 沧海校区小巴何时开通
+      - 沧海校区这里通小巴的路也早已完工，并且在粤海校区的站路牌也有南区的站，每次上课都要走很远的路并且和很多粤海校区的同学一起等小巴会比较费时间，想知道南区的小巴到底什么时候开通，也可以分流到对面校区等待小巴的人
+      - 放假
+      - 身份证
+      - 关于健身房
+      - 请问学校的健身房什么时候可以正常开放呀
+      - 关于体育场馆
+      - 请问后海校区的元平体育场和健身房什么时候可以开放？
+      - 离校问题
+      - 开学返校时能否允许家长开车进校搬行李？
+      - 暑期毕业班学生返校
+      - 疫情期间不能返校，有没有方法可以申请户籍卡的复印件邮寄到学生本人呢？
+      - 请问最早办理毕业手续什么时候，分别有哪些手续，丽湖校区在哪儿办，谢谢
+      - 关于今年兵役登记的问题
+      - 您好！我是大三的学生，今年的兵役登记由于疫情我把兵役证放在了学校。请问能只带兵役登记表去我们本地的武装部确认吗？
+      - 非毕业班研究生临时返校申请
+      - 询问辅导员是可以申请临时返校的，想问下有没有申请表，还是自己写一份word文档作为申请资料呢
+      - 如何进行学生短时回校申请
+      - 得知可以申请短时回校，但是不知道在哪申请，如何申请。
+      - 可以返校拿东西么
+      - 请问现在可以返校取物吗？需要办理什么手续吗？
+      - 支教活动
+      - 我们学校可以参加的假期支教项目都有哪些啊，可以以怎样的途径加入呢？
+      - 教工餐厅学生何时可以用餐
+      - 教工餐厅上课的时候是不是学生只能吃晚餐？今年寒假的话请问三餐中是否对学生开放？
+      - 家长车辆进入学校
+      - 请问怎样才能申请让家长车辆进入学校
+      - 军训服领取
+      - 已毕业的校友可以使用健身房吗？
+      - 关于军训申请免训的问题
+      - 文科类的长椅可以借用吗？
+      - 体育场馆预定时间
       - 后勤服务相关问题
       - 后勤相关问题
       - 心理咨询相关问题都有什么？
@@ -196,7 +552,6 @@ nlu:
       - 粤海信件，明信片收寄
       - 饮水机
       - 电压上限问题
-      - 丽湖校区通讯信号问题
       - 寻找肇事车辆该求助哪个部门
       - 西南有能贴海报的地方吗
       - 我们有一个活动宣传，但是今年的新生都是住在西南的，所以想问问那边有可以申请来贴海报的地方吗?
@@ -257,7 +612,6 @@ nlu:
       - 想问下迁入学校集体户口后，户口所在地详细地址是什么，以及我们档案所在单位就是档案馆吗
       - 迁入学校的户口所在地地址
       - 想问下迁入学校集体户口后，户口所在地详细地址是什么，以及我们档案所在单位就是档案馆吗
-      - 大四学生学籍更改什么时候完成？
       - 我暑假改了名字，是9月的时候给教务处递交的证明材料，网上与线下一同申请的，现在还没有任何变动，仍然处于“待教务处审核”状态。我今年大四了，9月份还要报名考研，如果学籍没改好，会有很大麻烦，想知道能不能在毕业前把学籍改好？最快什么时候能改好？是否还需要什么材料？教务处会不会通知我？？ 急盼复！！
       - 毕业生户口转回原户籍所在地
       - 毕业时填写了暂不派遣户口，现在因为考研需要将户口迁回原户籍所在地，请问需要什么手续？如何办理？
@@ -304,6 +658,7 @@ nlu:
       - 12月份工时确认时间提前了，所以错过了确认时间怎么办？怎么联系相关人员？
       - 身份证
       - 2019届新生户口转入学校故无法申请新身份证且无法办理临时身份证，请问怎么办？
+      - 理工楼L3研究生成绩打印机没打印纸了找谁解决
 
 
 
