--- a/data/nlu/makeup_exam.yml
+++ b/data/nlu/makeup_exam.yml
@@ -8,6 +8,8 @@ nlu:
 
   - intent: 补考缓考/其他
     examples: |
+      - 期末考被退出来了，然后被交卷了，零分，能不能重考
+      - 补考成绩什么时候可以出
       - 补考缓考相关问题
       - 缓考选课
       - 体育课挂科需要补考吗
@@ -109,3 +111,41 @@ nlu:
       - 取消考试资格和挂科一样吗
       - 取消考试资格和挂科，在教务系统里的记录都是记做挂科吗？还是取消考试资格的会区别于挂科来记录啊？两者除了叫法不同，所造成的不好的影响有啥区别吗？
       - 什么时候能申请缓考呀
+      - 缓补考成绩查询
+      - 关于2019-2020第一学期缓补考成绩公布
+      - 补考成绩复查流程
+      - 缓考科目在成绩查询里显示缺考
+      - 补考成绩复核
+      - 申请缓考后会影响成绩吗
+      - 补考成绩如何查询
+      - 申请了缓考成绩查询显示缺考，成绩显示F
+      - 考试前申请了两门课的缓考，现在成绩出来了为什么备注上写的是缺考，成绩显示F呢？
+      - 请问我能申请复核补考考试成绩吗
+      - 缓考的成绩评定
+      - 请问因为生病缓考会影响成绩评定吗，是否会与正常批次的期末考试成绩有差异，需要参考哪个文件的规定呢？谢谢！
+      - 在下目前大三，错过了这次的大学生体质健康测试，想请问会有补测的机会吗，有的话会是什么时间？想知道若真的没成绩这会影响后续毕业考研吗？
+      - 请问补考成绩什么时候出来，在哪里能查到呢?
+      - 期末成绩只能看到一个F，我该如何了解是平时成绩还是考试成绩出了问题，个人感觉考试应该没问题，若是平时成绩出问题，补考较好能否挽回。
+      - 慕课挂科
+      - 阅读缓考细则后了解到缓考之前的成绩算作F，这会影响奖学金的评定吗？是缓考之后的成绩出来后绩点会重新计算吗?
+      - 1.补考需要主动申请吗，还是会自动安排补考？ 2.期末考试成绩不错，但因平时分不够而挂科的，补考有用吗。
+      - 2019-2020第二学期缓补考成绩何时公布
+      - 补考成绩公布了吗怎么查询
+      - 补考成绩公布了吗，怎么查询？
+      - 2019-2020第二学期的考试成绩已经公布了 怎么2019-2020第一学期的缓补考成绩还没出呀？不是9.7号就已经上传完毕了吗？
+      - 怎么成绩还没出呀？不是上午九点就已经录入完了吗……要是太晚公布要补考的同学怎么复习啊
+      - 上上学期的缓考什么时候可以出成绩呀？还有上学期的期末考试成绩啥时候可以知道？成绩出太晚了，让那些补考的同学怎么复习？
+      - 请问都过了5天了，大概什么时候能出补考成绩呢
+      - 大一上学期选修了工作中的心理与行为学，最后期末线上考试因为系统的原因只拿了六分，但是综合了签到和平时任务的分数，最后线上总分还是合格了（超过六十分），然后平时见面课签到也满分，学校也并没给我安排补考，为什么成绩查询的时候显示是零分，这种情况要如何向学院提出申请呢
+      - 请问补考成绩是已经出了吗，现在可以查到了吗
+      - 补考成绩什么时候可以查询 我是8月30日参加的大英B 补考
+      - 由于本学期成绩要下学期才能公布，不清楚自己体育课是否挂科，下学期大四了，需要安排实习和备考考研，等成绩出来再选会否选不上。
+      - 拓展通识课挂科
+      - 补考成绩如何查询，老师录入了就可以查询么
+      - 高数绩点太低了，可以主动申请重修吗？如果挂科后不去补考可否直接进入重修？
+      - 我因为记错时间而错过了大英期末考试，但是平时成绩还在，如果我挂科了还能补考吗？挂科的依据是平时加期末考成绩低于60还是期末考低于60？缺考还能补考吗？
+      - 缓考审核状态
+      - 12.28提交的网上缓考申请 12.30八点四十左右交的因病申请的资料 当时那个人说ok了 但是现在看那个缓考申请还是待审核 但我今天就有两门考试了 会影响我的考试成绩吗？
+      - 请问因为疫情原因延期的辅导员考试有消息了吗?可否告知大概的时间点呢？
+      - 报名了4.16师院的普通话考试,因疫情原因,也没有通知延期,想问下学校是怎么处理的
+
