--- a/data/nlu/network.yml
+++ b/data/nlu/network.yml
@@ -42,6 +42,21 @@ nlu:
 
 - intent: 校园网服务/其他
   examples: |
+    - 我的VPN功能好像比较落后，跟老师发过来的vpn界面截图比较少了很多功能
+    - 我用各种浏览器进入内部网的办事大厅登陆后后选择任意模块都显示系统异常。所有功能都用不了
+    - 苹果手机电脑如何连接学校里的wifi
+    - 学生毕业后学校邮箱（szu.edu.cn)是否可以继续使用，若否，会保留多长时效。
+    - vpn版本较旧
+    - 我想咨询一下在内部网下载安装matlab需要@szu.edu.cn；@nwsuaf.edu.cn，但学生邮箱是@email.szu.edu.cn，无法收到邮件，请问安装要求的邮箱在哪里登陆呢？
+    - 如何登陆财务系统？没有在网上大厅和内部网看见登陆入口啊
+    - 网上报修功能迟迟不能使用
+    - 内部网用户名更正
+    - 生物医学工程教学实验中心网页入口在哪里？校外登陆VPN后只能从内部网进入查找，但是不知道在哪里？？
+    - 学校wifi
+    - 内网程序有问题
+    - 我内网的培养计划一直打不开，而且学业完成查询也是打不开，一直显示0%，但是我的同学都是可以打开的，我想知道怎么办？
+    - MATLAB激活--邮件收不到
+    - 网上缴费系统打不开
     - 校园网服务相关问题
     - 校园网相关问题
     - 校外访问VPN登陆不上
@@ -108,8 +123,6 @@ nlu:
     - 请问校园网络还没有到期，可以更换运营商吗？
     - 网络信息中心办公位置
     - 请问网络信息中心是否仍在L3-1011办公
-    - bb上显示不出作业栏
-    - 前一天看bb还有作业，今天打开发现没有作业栏提交不了作业怎么办？要联系哪个老师解决？（bb负责老师和网络中心办公电话都是空号？）
     - 关于校园无线网的连接问题
     - 我的手机搜索不到学校的无线网SZU-Mobile，然后连接SZU-WLAN也无法获取身份验证界面。想请问下这个问题应该找哪个部门解决呢？
     - 网络问题
