--- a/data/nlu/responses/responses.yml
+++ b/data/nlu/responses/responses.yml
@@ -553,5 +553,8 @@ responses:
   utter_专业修读/取消双学位:
     - text: "<div class='msg-text'>你好，双学位可以取消，同学想取消双学位资格，可随时向第二专业的教学秘书提出申请，老师会登记名单然后统一处理。</div>"
 
+  utter_专业修读/转专业报名:
+    - text: "<div class='msg-text'>你好，转专业网上填报路径：学校主页—办事大厅—学生服务（本科生教学）—报名申请通道—转专业。具体细则请留意公文通。如有疑问，可直接咨询学生事务服务中心，办公电话：26535653，办公地址：学生活动中心一楼。</div>"
+
   utter_专业修读/其他:
     - text: "<div class='msg-text'>暂时不能回答该问题。</div>"
