--- a/data/nlu/scholarship.yml
+++ b/data/nlu/scholarship.yml
@@ -9,6 +9,57 @@ nlu:
 
   - intent: 奖助学金/其他
     examples: |
+      - 困难认定取消后可以重新申请吗
+      - 因为休学导致研究生延毕，研究生补助是否会发放
+      - 研究生补助
+      - 往年学校公益之星一等奖的评定标准。累积总公益时长是多少小时？
+      - 今天在办事大厅的困难认证提交资料时，出现“参数字符串解析错误”问题，请问如何解决？
+      - 困难认证网上申请
+      - 困难认证时需要提交的佐证材料具体指什么或者包括什么
+      - 大二进行困难认定的申请表是到时候学校会发放吗？还是自己打印?
+      - 困难认定申请表上无盖章这一栏，那相关确认的盖章应该盖在什么位置呢？
+      - 我的困难认定还是处于待学院审核阶段。按照往年这个时候都是学校审核完成了的。请问为什么呢
+      - 申请伙食补助的佐证材料是必填的，不知道应该上传什么资料，不上传没办法申请
+      - 申请学校的学业贷款的流程和细则在哪里可以了解
+      - 腾讯益友奖优秀导生奖状
+      - 残疾补助
+      - 学习之星有最低学分要求吗？有的话，是多少分呢？
+      - 昨天收到消息显示助学贷款已经发放，发至在助学贷款的那个支付宝账号里，但是那个钱好像是用不了显示要等待学校扣款?请问这种情况怎么办，是等学校到时候直接扣款吗，我的学费已经缴纳了但是学校还要迟一些才扣学分费，可是我的住宿费也还没交，那账户里的钱可以自己支配吗。一脸迷惑
+      - 缓考成绩出来了 但我仍无法申请奖学金（仍显示挂科）
+      - 学分与奖学金
+      - 公益之星评定标准
+      - 生源地贷款，缓交学费
+      - 生源地贷款学费扣费时间
+      - 生源地助学贷款到账了，学校已多扣费，但是显示学费也未缴清
+      - 交学费（助学贷款已到账）
+      - 助学贷款扣费和学费不一致
+      - 奖学金、奖励学分
+      - 助学金排名证明
+      - 因为自助打印故障了没办法打印排名证明，但是申请助学金需要上传，请问这种情况怎么办呢？
+      - 语言考试类的奖学金
+      - 据了解深圳大学设有国际交流奖学金，其中含有语言考试类的奖学金讲给成绩优秀的学生。请问如何申请，谢谢！
+      - 请问助学金什么时候发呀，最近不是在交学费吗，能在扣费前发吗？
+      - 助学贷款与扣学费
+      - 请问一下今年有这个雅思托福成绩的奖学金（报销）项目吗？会在什么时候呢？
+      - 学业奖学金-学习之星
+      - 请问申请奖学金对于学分有下限要求吗？听说是有15分的下限要求？有相关规定可以查看吗？
+      - 办理了生源地贷款的，已经收到短信说贷款的8000元已自动作为学费自动缴纳，可是未交学费并不到8000元，并且内部网上还是显示学费没有缴纳，请问这有什么问题吗？
+      - 今天生源地贷款下来了，但为什么我现在应交5050元，而他将贷款全部划扣，而且网上缴费系统还显示未缴费
+      - 如何知道本专业一个学年的绩点排名，申请学习之星奖学金
+      - 请问办理2020-2021学年生源地贷款，缓交学费是自行选择申请吗？没有申请缓交学费的话是按正常批扣时间缴费吗？
+      - 你好，想咨询一下，因为我是生源地贷款的。因为我的  学费，学分费，住宿费   都还没缴费，但是刚刚想缴费显示只有住宿费一条欠费记录。请问是怎么回事呢，谢谢解答
+      - 之前办理过生源地贷款，也填过缓交申请表，曾经在上次批扣学费的时间段存够了钱，但是银行没有批扣，请问下次什么时候交学分费？在哪里交？
+      - 就是申请了生源地贷款，然后如果扣掉学费住宿费，那剩下的余额是不是会打到学生的中国银行卡上
+      - 因为我是属于生源地贷款的。11月初时候并没有从我的卡上扣掉学分费的金额(●—●)?
+      - 在做调查，请问残疾学生如何申请补助，看到公文通没有针对残疾人士的补助，只有家庭困难补助
+      - 生源地助学贷款
+      - 你好，请问腾讯益友奖优秀导生奖状可以领了吗，之前奖金是已经发了的
+      - 关于学校的学业贷款
+      - 校源地贷款
+      - 想咨询下校源地贷款什么时候可以办理？谢谢！
+      - 记得之前求职创业补贴是3月申请，结果今年改时间了，学院老师也没通知，所以错过申请时间了，请问可以补领这笔钱吗？自己有助学贷款，家庭经济窘迫。
+      - 助学贷款
+      - 部分学校生源地助学贷款提前还清，会有奖励金，请问深大有这个政策吗？
       - 奖助学金相关问题
       - 贷款的老生登陆本科生选课，显示未注册、未交费
       - 助学金
@@ -143,7 +194,6 @@ nlu:
       - 计算机与软件学院本学期的助学金什么时候会发放
       - 国家助学金
       - 忘记去签核了咋办？？
-      - 日语n2考试过了如何报销
       - 听朋友说日语等级考试过了学校可以报销，而且只有九月份可以统一报销，请问具体内容和申请流程是怎么样的。
       - 请问学习之星和鹏程奖学金的证书或者证明材料怎么获得呢？
       - 我现在大四，这学期申请到了学习之星和鹏程奖学金，现在需要证明材料，不知道如何申请证明。
