--- a/data/nlu/specialty.yml
+++ b/data/nlu/specialty.yml
@@ -12,10 +12,83 @@ nlu:
       - 取消辅修
       - 双学位取消是随时可以取消的吗，还是要转专业成功才可以取消
       - 学了一个学期的会计学辅修感觉不太适合自己，想问下如何才能取消辅修身份呢
+      - 双学位可以随时取消吗，选了课怎么办呢？怎么取消呢
+      - 想取消辅修的话如何处理
 
+  - intent: 专业修读/转专业报名
+    examples: |
+      - 转专业报名
+      - 我想问一下转专业报名在哪里呀？谢谢！
+      - 转专业报名在哪里呀
+      - 怎么报名转专业
+      - 怎么报名转专业？
 
   - intent: 专业修读/其他
     examples: |
+      - 除了人工智能的智慧医疗外，医学部还有啥微专业。还是说目前就这一个？
+      - 播音主持专业的专业代码是多少
+      - 想请问辅修学分不满会影响毕业吗？
+      - 辅修
+      - 请问21级申请辅修双学位既然要等到第三学期，那么绩点要求是算大一两个学期的吗？而且申请这个是只有绩点要求还是还要笔试面试？
+      - 师范生身份、转专业课程学分转换
+      - 双学位学分限制
+      - 请问辅修和双学位了之后，理科专业就算上学期绩点低于3.0，学分上限也是35分吗？
+      - 转专业是可以随便转吗？
+      - 在新的转专业的管理办法中，第十六条中提及其高考成绩不得低于拟转入专业录取的相应分数。请问这个意思是只能往成绩低了的转吗？还是说，符合这个前提条件就可以不用参加考试了？麻烦解答，谢谢！
+      - 近日了解到深大可以提供高考非英语语种考生转到相应语种学习，想询问相关事宜和截止时间，以及所需的相关资料（公告上看到需要三年非英语成绩单，可是我只是从高三开始学习日语，还是否能转？）
+      - 关于大一下学期转专业后补回大一课程的问题
+      - 我之前修过一门C程序设计，已经更替为自己双学位的类似课程学分，但是自己的主修学位也有一门类似的课程高级语言程序设计，就没有更替为学分，请问可以把主修的这个学分也更替为已修吗
+      - 我的主修和辅修课程有一门课是一样的（属于专业方向必修课）而且我已经上过一次课了（已经通过），我想问问申请免修会不会影响我最后申请辅修证书（目前只差一门课就修读完所有辅修课程。如果没有影响，我的免修申请应该交给谁？
+      - 辅修证明领取
+      - 我按辅修方案完成了辅修，现在大四要毕业了，已知毕业证书和学位证书的领取时间和地点，但是我的辅修证明应该什么时候在哪领取呢？
+      - 转专业的学分认定
+      - 转到新的专业后，需要把新专业所有的必修学分都修完吗？
+      - 转专业已成功，这学期原专业的一门课挂科会影响到转专业吗。
+      - 如何撤销双专业的第二专业？
+      - 本人大三，大二时选择了行政管理为双专业，但是由于疫情原因无法把第二专业的课程修满，现打算撤销行政管理专业，请问如何撤销？如果不撤销，会影响到原本专业的毕业吗？
+      - 1.经院物流管理双学位要求高数C。主修专业已修高数A，下学期是否还需修高数C。 2.如若不需要，高数A学分是否只能用于主修专业学分
+      - 辅修和双学位
+      - 你好，我想咨询一下这学期转专业的流程和具体时间
+      - 请问转专业的绩点要求是多少
+      - 双学位 毕业资格
+      - 请问双学位是即使最后修满了学分，但是因为有挂科记录就不能获得这个学位吗？对课程类型有限制吗比如必修还是选修？相关规定具体在哪里看呢？
+      - 想取消传播学院的双修请问应该去哪里递交材料？
+      - 双学位不修读需要申请吗
+      - 目前大四，申请到双学位之后一直没有修读，需要去申请取消吗，还是不用管
+      - 如何开辅修英文证明
+      - 想请问下辅修英文证明在哪里开，微信公众号智能开中文的证明，还有辅修的课程和主修课程可以分开开绩点证明吗
+      - 转专业学费
+      - 因为这学期是先交学费后转专业，所以交的是原专业的专业费，但是各个专业的专业费不同，请问差额什么时候多退少补？
+      - 转专业后学分认定问题
+      - 如果有转专业的打算，是大一修现专业学分越多，对转专业越有利吗？
+      - 请问我现在是大一法语专业，想转法学，应该准备一些什么呢，需要提前修什么课呢
+      - 转专业能提高限制学分
+      - 大三了才转专业，为了不想延毕，可以提高限制学分吗
+      - 您好！请问如果这一学期修了辅修课程，但之后由于主修课程或其他事务繁忙退掉辅修可以吗？已修的辅修课程学分和绩点还算吗？
+      - 我本学期转专业成功了，转专业前的专业选修课挂科了，想问一下:是否会影响我的毕业总成绩单上的绩点？（就是是否会计入我的总成绩单绩点，还是直接当我没修过一样？）
+      - 请问转专业的公共课考试成绩  分数线  会公开出来吗，会的话请问哪里可以查得到呢？
+      - 应用数学双学位转辅修咨询
+      - 你好，请问应用数学的双学位要怎么才能转成辅修？还有，双学位修读了的必修课程不是辅修需要修读的必修课程，请问可以将双学位修读的必修课程的学分转成辅修需要修读的必修课程的学分吗？谢谢！
+      - 转专业进度
+      - 在办事大厅转专业一栏我的转专业申请数据未显示，但个人也未进行删除，是什么原因会显示无数据？既然如此，在哪里看转专业考试的公共课成绩和转专业申请进度？
+      - 2019级，如果转专业成功的话，是否可以自愿选择降级
+      - 你好！我想问一下第二批毕业生成绩公布时间，还有何时能够领取双证？
+      - 转专业的“公共课成绩录入”显示不通过，是指还没考试的意思还是我被筛掉了啊？
+      - 尊敬的老师： 您好！我是深圳大学师范学院大四双修金融的学生，由于时间内冲突，我还差一个毕业论文和两门课没能完成双学位，2020年已经申请毕业了，计划出国读研。请问学校有没有相关制度可以允许我研究生毕业之后再回学校来继续缺的两门课程和毕业论文，再来拿金融学双学位证书呢？
+      - 关于转专业服务中公共课成绩
+      - 转专业服务里，申请详情里公共课成绩显示不通过，公共课考试还没有开始，应该是进行中，显示不通过想问一下是系统的问题大家都是这样，还是我个人的问题。
+      - 转专业考试
+      - 请问转专业考试要考哪些内容？具体有什么要求
+      - 双学位毕业证
+      - 请问双学位学生毕业时有两个毕业证和两个学位证吗？
+      - 本人在硕士二年级（2020.09）时将具备在某地某事务所实习资格，若本人在该单位实习，按照行业管理办法，需将个人人事关系转出，请问办理流程和所准备材料
+      - 大四，辅修修不满会影响毕业吗
+      - 19级社会学的培养方案里个性学分是21分，如果双修是否能用双修的另一专业的专业学分作为社会学专业的个性学分？
+      - 转专业、辅修
+      - 您好，请问转专业和辅修可以选择同一个专业吗？若提交了两个申请都通过了，那会怎么样？另外，辅修专业是只需将该专业的辅修培养方案中的学分修完就行了吗？
+      - 您好，我想问一下数学类、数学师范的专业人数。办事大厅那个学生情况统计学生是没有权限查看的呜呜。十分感谢！
+      - 外国语学院的学生都可以双修什么专业
+      - 我现在是经济学院大三的学生，请问一下专业实习是由学院统一安排；还是可以自己找呢？
       - 转专业、辅修、双学位相关问题
       - 辅修志愿
       - 申请辅修的时候给了三个，是说我可以填写三个？那有等级顺序之分吗？
@@ -29,8 +102,6 @@ nlu:
       - 想知道近两年管理学院的双学位修读资格要求和名额
       - 请问转专业名额什么时候出来
       - 你好，转专业工作通知本周四各学院会出转专业名额，我刚才去转专业系统还是查看不到，请问名额出了吗
-      - 转专业报名
-      - 我想问一下转专业报名在哪里呀？谢谢！
       - 转专业
       - 想要转到汉语言文学专业，想要了解相关要求，请问如何得知呢
       - 想问今年转入传院广告的专业能力考试内容是什么?或者有相关老师的联系方式吗？感谢。
@@ -51,11 +122,9 @@ nlu:
       - 转专业要求想转的专业不得低于生源地该专业的最低分数线，那哪里可以看到今年各专业录取分数线呢？
       - 退辅修
       - 老师好！请问退掉辅修专业的流程是什么呢？
-      - 延毕
       - 因为双学位申请的延毕可以随时取消吗
       - 转专业事宜
       - 临床是否转不了专业？如果想转进生医工有什么要求吗？ 还有就是转完能不能申请重读大一啊？
-      - 英语专四
       - 考了英语专四后转专业，专四的分数可以和英语六级转换吗
       - 转专业后续
       - 本院转专业后的绩点怎么算，会不会影响之后的评选以及保研？
@@ -68,7 +137,6 @@ nlu:
       - 19级想申请英语双学位但是网上无法申请，请问只需要提交纸质表就可以了吗？
       - 关于双学位申请表
       - 请问一下经济学院会计专业需要交纸质双学位申请表吗？
-      - 关于双学位申请表
       - 您好，想问一下申请管理学院双学位在现阶段是否要在网上申请后，再提交纸质申请表？谢谢！
       - 辅修和双学位
       - 想咨询一下如果想要申请心理学的双学位，是直接在网上报名即可，还是要在报名阶段就要递交纸质申请材料到心理学院？如果是要递交材料，具体要递交什么材料呢？
@@ -115,7 +183,6 @@ nlu:
       - 我想知道申请师范学院的双学位需要下载双学位申请表，填写好发给辅导员盖章嘛
       - 辅修
       - 如果金融辅修计算机专业，在2022年经济学院会整体搬迁到西丽校区，这样的话不是很难进行两边跑上课吗
-      - 重修
       - 本人是大一新生，挂了马克思主义中国化进程与青年学生使命担当的一门慕课，这个课是当时选思修时，附带的，我想问一下如果我重修，是重修思修还是重修马克思慕课。还有我重修后是否影响我转专业
       - 双学位
       - 您好：之前咨询过关于申请数学与统计学院的双学位，在填报志愿的时候是否可以同时填报两个该学院的专业。事务中心的回复是各学院要求不同，并提供了数学与统计学院办公秘书的电话26538959 2020.6.4曾致电两次，但是反应号码有误 不知能否代为询问 麻烦了，谢谢
