--- a/data/nlu/student_id.yml
+++ b/data/nlu/student_id.yml
@@ -182,6 +182,7 @@ nlu:
     - 怎么绑定学生资质？
     - 如何绑定学生资质。
     - 火车票优惠卡资质绑定
+    - 若26，27号忘了去绑定学生资质，还有其他渠道绑定学生资质吗？
 
 - intent: 学生证件/火车票优惠_学生证充磁
   examples: |
@@ -244,6 +245,66 @@ nlu:
 
 - intent: 学生证件/其他
   examples: |
+    - 金融社保卡丢失重新办理
+    - 金融社保卡丢失如何重新办理
+    - 能提前领取毕业证吗？
+    - 优惠区间更改
+    - 经院金融专业大概什么时候发毕业证学位证？
+    - 第一批毕业证和学位证什么时候发下来
+    - 毕业证、学位证什么时候发？报到证什么时候弄？
+    - 毕业证、学位证、报到证
+    - 户籍所在地是浙江，但在江苏省考的试，生源地是江苏，乘车区间只能选江苏省内的，想把它改成浙江省
+    - 火车乘车区间的目的地是空白的可否直接用笔写上，如果可以，办事大厅的学籍信息需要更改吗？
+    - 学生资质
+    - 乘车区间
+    - 你好，乘车区间的站点填写错误，想把深圳改成深圳北，可以更改吗？
+    - 火车票学生优惠卡
+    - 我是大一学生，寒假买了高铁学生票，在车站的检票口人脸识别不能通过，不知道是我的火车票优惠卡有什么问题，请问怎么解决呢？
+    - 火车站优惠站点
+    - 老师好，系统上的优惠火车站点不包括我家乡的鄱阳站，请问该如何操作。
+    - 我因为忘记了密码而且丢失了银行卡（不能交学费），但是我人不在深圳，这里的营业厅补不了深圳办的卡，怎么办？可以销户重开吗？
+    - 新生火车乘车区间
+    - 火车乘车区间
+    - 火车乘车区间写错了怎么修改？
+    - 体育经费
+    - 通用帐号的钱可以转出来吗？
+    - 通用帐号的钱可以转出来吗？不小心充值充错了
+    - 团员证
+    - 大一新生团员证弄丢了，要回原团组织补办吗
+    - 火车票学生优惠办理
+    - 请问沧海校区现在还能办理火车票学生优惠吗，可以的话应该是在哪里呢？
+    - 中国银行银行卡
+    - 请问丽湖校区19级药学的中国银行银行卡是由哪个支行办理的？
+    - 绑定卡
+    - 我的一卡通不小心取消了绑定怎么绑定回去
+    - 火车票取票
+    - 请问现在学活中心可以取火车票了吗
+    - 毕业生火车票购买
+    - 请问今年毕业生暑假还能购买火车票吗？
+    - 火车票
+    - 请问学校可以办理学生票资质核验吗 还是只能去车站办理
+    - 清明学校假期怎么安排，我好早点订票，谢谢。
+    - 取车票
+    - 学活这几天可以取学生票？
+    - 请问学生票优惠区间可以更改吗？如果可以的话要去哪里申请？
+    - 火车票优惠卡1月11号还可以补办吗？
+    - 研一新生查不到火车票学生资质
+    - 研究生证已经发放，里面也贴了火车优惠卡，但在12306官网点击学生优惠资质查询却显示没有资质，是新生信息还未同步或其他什么原因导致的呢？
+    - 火车优惠卡申办
+    - 请问没在规定时间内完成火车相关信息更新，还能不能进行火车优惠卡的申办？
+    - 丽湖学生身份证什么时候能去拿？
+    - 通用代扣费账户
+    - 请问通用代扣费账户的钱转到卡账户，要在哪里操作？
+    - 银行卡
+    - 学校为我们办的银行卡（中国银行），毕业后可以正常日常使用吗？
+    - 之前因为银行卡卡号问题要去财务部登记现有的卡号领取实习补贴，但是当时有事没弄成，现在想问一下该怎么提交银行卡号领取补贴呢？谢谢！
+    - 银行卡短信费问题
+    - 我们的银行卡银行卡的短信通知费是免费3个月的吗？还是我们在校期间是免费的？
+    - 车票
+    - 学活现在可以取火车票吗（不是高铁票）
+    - 请问学活现在可以取火车票了吗
+    - 高铁票
+    - 现在能在学生活动中心取票吗?如果不能，那取票机大概什么时候能够使用?
     - 学生证件相关问题
     - 更换学生证
     - 毕业证、学位证及学生证
