--- a/data/nlu/teaching_affairs.yml
+++ b/data/nlu/teaching_affairs.yml
@@ -14,6 +14,10 @@ nlu:
     - 学生如何在网上补缴学分费？
     - 可以在网上补交学分费吗？
     - 可以在网上补交学分费？
+    - 缴学分费
+    - 那个学分费，现在要怎么补交啊，会不会有什么影响?
+    - 学分学费                                                                                                                                                                                                    该如何补缴？
+    - 学分费缴纳
 
 - intent: 教学教务/缴学杂费
   examples: |
@@ -27,6 +31,11 @@ nlu:
     - 错过系统扣费如何再缴纳学杂费？
     - 学费缴纳
     - 第二学期学费没有及时缴纳咋办？
+    - 因为银行卡激活不了 所以现在没扣学费 哪里可以补交学费
+    - 上一次批扣学分费没有扣到我的，请问如何补缴学分费
+    - 没有存钱到银行卡里，自行缴费怎么做？
+    - 网上缴费系统已经关闭，还有其他方式可以缴费吗
+    - 学费没有扣到现在要怎样缴费，需要去银行吗，内部网的缴费通道好像关了
 
 - intent: 教学教务/百度文库
   examples: |
@@ -39,6 +48,611 @@ nlu:
 
 - intent: 教学教务/其他
   examples: |
+    - 大二可以参加实习吗？实习的单位一定要找学院指定的单位吗？自己找的单位可以吗？
+    - 带有个人信息的放假证明在学院的哪个部门可以开？
+    - 现实表现及鉴定要在哪里开？
+    - 如果我打算延毕的话，毕业设计可以正常完成吗？还是说必须等到延毕的第二学期才能完成？
+    - 如果大一第一学期的时候大英挂科需要重修，那下学期能参加四级考试吗？还是要重修之后才能参加？
+    - 在安装MATLAB时，官方会发送邮件到学生信箱，可我一直收不到电子邮件
+    - 录取通知书证明
+    - 结业生学业完成后，什么时候能拿结业证换毕业证？
+    - 休学学生如何从网上申请复学
+    - 假期实践（假期见闻）的内容要求是什么
+    - 在哪里可以补交假期实践（假期见闻）
+    - 申请预毕业
+    - 复学考试
+    - 在哪里可以找到《深大学报（人文社科版）》的文章的格式
+    - 我在网上申请了延毕，网上审核已经通过。那个纸质的申请表是8月中下旬返校之后提交吗？
+    - 不能提前发放毕业证的话，可以提前获取一个扫描件吗？
+    - 深圳大学高水平学生运动员管理规定
+    - 延迟注册
+    - 期末考里有需要跨校区的考试怎么办
+    - 现在可以去教材中心买教材吗
+    - 为什么打开了办事大厅成长记录还是不显示排名和GPA？
+    - 如何查看自己一学年的排名？
+    - 需要多少次社会实践
+    - 在哪里可以开出国留学证明？
+    - 绩点上浮结果大概什么时候出来？
+    - 想申请入党，请问流程和具体提交方式？
+    - 周一晚11-13节的大学物理实验（课序号45）的上课老师是谁和上课地点在哪
+    - 今年英语四级考试照片采集的时间是什么时候
+    - 大一的时候错过了四六级拍照认证，什么时候、通过什么方法可以补上？
+    - 计算机二级考试的报名时间
+    - 现在上到第几周了
+    - 现在第几周了
+    - 在哪看现在上到第几周了
+    - 一年只能申请参加一个聚徒项目吗？
+    - 王大野老师每周有几节壁球课 分别是什么时间呢
+    - 普通话什么时候，在哪里交费
+    - 怎么弄到去年大计的期末考试试卷？
+    - 内部网办事大厅，全校方案打不开怎么办？
+    - 需要提供本科课程的培养方案（课程描述），我该去哪里下载呢？
+    - 培养方案课程描述
+    - 大物期中考安排在哪看
+    - 沟通心理学的线下考试是开卷还是闭卷？
+    - 学校教务处是否能查到我的高中毕业证编号，若不能，我需要通过什么途径查询到。
+    - 休学一年，下学期复学，请问现在可以申请？还是必须等到下学期开学才能申请？
+    - 每个学期的绩点排名应该怎么查询？
+    - 出国留学保留学籍申请表上有保留学籍年限，请问是可以自己填写年限还是有只能保留一年或者一学期这样的要求
+    - 补报六级
+    - 我的讲座登记册丢了，之前上面有一次讲座登记记录。该怎么补办登记册，之前的讲座记录可以保留吗？
+    - 创新发展基金基础实验项目
+    - 办理退学的时间是什么时候 如果学生本人不在国内，可不可以由父母代办
+    - 社会实践表的格式在哪里下载呢
+    - 普通话考试的证书不见了能够补办吗
+    - 党组织关系介绍信过期了怎么办，想知道咨询途径。
+    - 无法报名英语四级考试，有参加采集照片，但报名显示“学籍库无匹配项”为什么？
+    - 学校的教材在哪里购买，内部网的教材网看不到可以买书的链接。淘宝搜不到。
+    - 学校安排的大四学生的统一实习大概什么时候开始？
+    - 现在在哪里可以开入学至今所有缴纳的学杂费的票据呢？
+    - 深大的入党申请书有什么格式要求嘛？文件要去哪里找呢？在内部网没找到。
+    - 从哪里可以找到彗星楼举行的讲座安排呢
+    - MATLAB下载问题
+    - 领航讲座打不开，显示暂无服务
+    - 21级新生可以申请入党吗，具体有什么要求，还有何时可以申请
+    - 学校有购买multisim的服务吗 如有哪找？
+    - 非英语专业的学生可以报考专业英语四级吗
+    - 含本人录取详细信息的大学新生录取名册（加盖学校公章），请问这个具体要找哪个部门获取以及联系方式是什么？
+    - 专利代理需要事业单位法人证书的复印件，我想请问去具体学校哪个部门可以获取到？
+    - 专利申请材料需要在申请人处加盖深圳大学公章，请问要去哪里盖呢？
+    - 请问知识产权申请表哪里可以下载？
+    - 这学期能不能申请入党
+    - 转师范后还需要考教资吗
+    - 开卷考试能否携带电子平板、参考电子笔记？
+    - 请问怎么查询专业总人数？
+    - 请问卓越班制度内容中提到的第三学期开始，若卓越班学生平均绩点不满3.5将退出卓越班的条件，是指单独计算第三学期的绩点还是要算上第一和第二学期的绩点?
+    - 辅导员考试
+    - 申请免测是只需要邮箱提交材料吗？还是需要纸质材料和邮箱一起提交？是的话，纸质材料交到哪里呀？
+    - 哪里可以查看本专业学习课程的内容或者大纲呢？
+    - 我现在是大四的学生，要是有一门第一学期的必修课挂科了，是不是就得延期毕业了？
+    - 如果确定要延期毕业后，下学期还可以进行毕设吗？
+    - 如果就差一门上半学期的课，延期毕业可以是半年吗？
+    - 学分修完还需要多等半年才能毕业吗？
+    - 延期毕业
+    - 挂科重修后的成绩是按正常考试标准还是只能从F到D？如果成绩不理想但没挂科的话，是不能重复修读刷高绩点的是吗？
+    - 要是期末专业核心课挂科了，然后开学补考过了的话是不是不算挂科？然后，要是开学考过了会覆盖原来F的绩点嘛？会不会有什么不能拿C以上之类的限制的？
+    - 期末挂科
+    - 什么时候可以查期末成绩？只显示ABCDF等还是有具体分数呢？
+    - 补缴学费，在网上中国银行缴费过程中显示“账户借贷方已冻结”，应当如何处理
+    - 缴学费，账户借贷方冻结
+    - 线上成绩为84（占60%），线下论文也上交了（占40%），最终成绩为什么是F
+    - 张俊杰老师的跆拳道俱乐部课程如何申请复查？
+    - 今天查成绩的时候发现一些问题 我是免修大英的 成绩单上有两门大学英语1 一门是B 一门是F 可是绩点计算时把F也算进去了 请问是什么情况
+    - 学校人工盖章问题
+    - 需要至目前为止的百分制成绩单作为参考。在疫情期间应该如何获取电子版？不一定需要学校公章
+    - 我想打印中英文成绩单等留学申请资料应该去哪里办理呢？有无网上通道？
+    - 请问一下深大学生事务中心现在有开门吗？
+    - 目前深圳大学教务部公众号公布的电子版成绩认定研究生无法下载，求职工作中各单位要求有成绩证明，不然无法提交工作报名材料，望学校及时帮忙给予解决办法
+    - 硕士在读期间实习人事关系转出
+    - 我已发送邮件至教务部老师的邮箱，可是并没有回复，想问下老师是否收到消息，需要再次发送吗
+    - 上学期期末成绩复查
+    - 如果我毕设答辩已完成，申请毕业之后，发现学分还未修满，这时可否申请延毕？还是只能选择结业？
+    - 网上交学费交不了 获取缴款通知书号那里显示无法连接到远程服务器 。应该怎么交学费啊 已经欠学费有一段时间了该怎么办呀？
+    - 研究生在读证明纸质版如何办理，可以邮寄吗？
+    - 想问下学校的成绩单自助打印机开了吗,申请回校后可以使用吗
+    - 现在可以复查成绩了吗？
+    - 挂科复查
+    - 大英2如何申请雅思成绩转换
+    - 打印成绩单的话上面会有考试均分或者考试分数吗？
+    - 请问一下弗洛伊德的精神分析引论这门慕课的成绩怎样复查
+    - 请问在缴学费的时候发现弹出的信息是“收费账户已被冻结”，请问还能缴学费吗？有什么解决方法吗
+    - 如果大英在本学期末线上考试，如何申请雅思成绩转换？
+    - 慕课期末考
+    - 绩点浮动是在什么时候可以申请的？
+    - 传播学院绩点浮动的申请流程是什么？需要哪些条件准备哪些材料？
+    - 绩点浮动可以转化为均分吗？
+    - 怎么操作才能得到在校证明呢？
+    - 申请欧洲访友签证
+    - 第二批毕业生成绩公布和领取双证时间
+    - 这个暑假我能否在家网上申请然后下载汇总成绩单呢？
+    - 哪里可以下载到原始录入时的百分制成绩呢？
+    - 专业选修课挂科，而后期如果选择了重修这门或者放弃转修其他的，档案还会留下挂科记录吗？
+    - 学活可以打印汇总成绩单吗？
+    - 请问成绩公布了吗，在哪里查询
+    - 7月份申报的c语言程序设计成绩修改，请问什么时候处理
+    - 准备申请出国留学，需要给成绩单和信封盖章，请问人工盖章在哪里可以盖？丽湖校区是否也可以盖章，还是说盖章的地方都得到粤海校区？
+    - 请问深圳大学内部网里面查到的成绩，研究生每门课的绩点以及必修课的平均绩点都是怎么计算的呢
+    - 请问教室二维码扫码签到的功能是作课堂考勤参考（与课程成绩挂钩）还是仅作为疫情期间学生流动信息采集呢？
+    - 请问计算机一级考试成绩如何查询？我同学都收到了通过的信息，是通过的才会发邮箱吗？
+    - 我本科毕业于深圳大学，现在是深大的研究生，需要本科的百分制成绩（以前打印的只有绩点），请问在哪里可以查到，或者在哪里可以打印有百分制成绩的成绩单？
+    - 用人单位需要5分制成绩，据我了解深大是4.5满分制，请问绩点3.7在【5分制】里怎么换算？
+    - 我按时来教室听课，但是每次总忘记扫签到码，这样会影响绩点吗？如果会影响成绩，有什么补救办法？
+    - 常常忘记扫教室签到码怎么办
+    - 延毕
+    - 目前正在申请留学中，对方院校要求提供成绩的百分比均分证明，请问学生事务中心是否能开具此证明？
+    - 马克思主义中国化进程与青年学生使命担当的试卷交到了相应老师的信箱里，并做了登记 老师说收到了，但成绩显示为缺考 请问有什么办法吗
+    - 请问教务部现在放假了吗，有一些资料需要学校教务部盖章
+    - 据说选修挂科后可以选择重修或放弃，放弃后不影响绩点，那请问该怎么放弃呢？
+    - 在“办事大厅-成长记录”中查看到的全部成绩GPA和“学业完成查询-学生成绩”得到的平均绩点相差了0.6，两者都精确到了小数两位，是哪里出了问题？
+    - 现在是研一结束，从研二开学开始休学一年，复学算是研二吗，还需要重新修研一的学分吗，开题等流程是顺延到复学吗
+    - 请问延迟毕业应该如何申请？ 延迟毕业有什么申请手续？ 应该在什么时间点申请延时毕业？ 以及申请延时毕业是否有什么条件上的限制？
+    - 请问成绩复查应如何向开课单位教务室提出复查申请？是要到教务室还是线上申请？ 能否开通线上申请服务？
+    - 请问成绩复查有没有线上申请的方式？
+    - 请问这个学期初提交的成绩复议结果什么时候在哪里可以查看？
+    - 符合预毕业的条件申请了预毕业，这个学期有四门专业核心课，万一挂掉一门，可以在规定时间内申请延毕嘛？
+    - 请问本科在读证明在哪里办理
+    - 请问学校的成绩单是否可以有按照算术平均分（就是所有科目的百分比分数除以总科目数）计算的最终成绩单呢？（因为学校自助下载的只有加权平均分的成绩单）如果可以的话，是不是自己把成绩单按算数平均分算好后弄成表格拿过去教务处盖章就可以了呢？
+    - 体测是必须要合格吗？不合格对毕业有影响吗？
+    - 您好！请问学校什么时候会处理好？把多扣的费用退回？
+    - 我是全日制研一的学生，一年学费是8000+1500=9500，可支付宝显示要扣12000，这个是为什么呢，怎么解决！
+    - 一门必修课挂了 重修后可以覆盖挂科记录吗？
+    - 请问丽湖校区学生中英文成绩单打印和成绩单密封盖章事务的办理地点在哪里？
+    - 深圳大学教务部公众号的自助下载成绩证明无法登陆，一直显示用户名或密码错误。
+    - 自主下载成绩界面打不开
+    - 您好，现在深大教务部、考试君等公众号的成绩单打印服务现在都用不了，麻烦解决一下，谢谢
+    - 请问丽湖校区这边有没有可以打印成绩单原件的窗口地点或者机器呢？
+    - 请问教务部公众号里成绩单的电子版的效力是否等同于原件呢？（自己在家打印公众号里的电子版成绩单效力等同于去粤海校区行政楼线下打印的原件吗？）
+    - 请问学生如何联系开课单位教务室提出成绩复查申请?
+    - 复查思政考试成绩
+    - 本人申研需要开具 证明成绩等级在B及其以上的证明文件，请问在哪里开呢
+    - 大一在教育学部参与了寒招，也找了学院填表，但学分还没有认定成功，现在大二转到了人文学院，请问寒招的考核表该交到哪？
+    - 我想问一下，就一门课而言，研究生的百分制成绩，A、B、C等级制的划分，绩点，这三者的关系是怎样的？
+    - 体测成绩会影响绩点吗
+    - 在校/在读证明可以在哪里开具
+    - 请问五年制专业，汇总成绩单什么时候可以打印，打印前需要申请预毕业吗
+    - 本科生自助电子成绩单中的排位证明显示数据库操作异常，请问是怎么回事？
+    - 本科在读证明在哪开
+    - 如何查询百分制成绩
+    - 国外读研成绩单
+    - 想咨询一下如果网课没有刷完会怎么样。。。我的老师没讲过马克思中国化进程的成绩构成
+    - 慕课成绩会算入绩点吗
+    - 慕课成绩算入绩点吗 是与平时的专业课绩点一样的吗
+    - 您好，慕课《生活药学》此前未在课程公告栏发布任何通知，今天就直接发布了考试时间通知，并关闭了学习通道，导致我的课程未完成，且无法参加期末考，请问这是符合规范的吗？事关我的期末成绩，应该联系哪个部门说明情况、询问能否退出课程呢？
+    - 在教务处公众号可以查询到分学期的成绩单，请问有汇总所有学期的成绩单吗？因为我有一个学期一门《艺术与生活》慕课挂科了，后来我重新修读了一次，请问重新修读会覆盖原成绩吗？感谢！！
+    - 中国大学慕课成绩
+    - 为什么我的成绩单上的绩点计算的不是必修部分的绩点而是必修和选修一起的绩点
+    - 请问期末线上考试、论文、报告等形式的课程（也就是说不用等返校结课的），什么时候出成绩？
+    - 一些课程的老师说在7.8会录入成绩，那我们能在7.8查询到这门课的成绩吗
+    - 事务中心老师您好，学生对于本学期的期末成绩有异议，但联系任课老师后仍无法解决问题，应该去哪里申诉呢？
+    - 关于重复修读课程的成绩
+    - 课程成绩在任课老师同意更改之后，需要多久才能在办事大厅看到更改结果
+    - 如果一门课程成绩不理想但是未挂科，可以申请重修并覆盖之前的成绩吗？
+    - 最后本学期没有选上大英课程的Blevel学生，能否将雅思成绩转换成大英2的成绩？
+    - 关于重选课程最终成绩认定
+    - 关于汇总成绩单及重修课程覆盖问题
+    - 我有一门选修课挂了，请问汇总百分制成绩单里会计入这一科成绩计算吗
+    - 请问开具成绩单时的课程绩点以第一次修的成绩（未挂科）为准还是最后一次修的成绩为准？
+    - 挂科之后重修如果通过，大学课程汇总绩点是只按重修通过的成绩算还是挂科和重修的成绩都会算？
+    - 重修通过的话，汇总绩点是不是会变高
+    - 四年的总成绩绩点是怎么算的呢？挂科成绩会算入绩点吗？如果某一学年课选的很少，成绩很高，这一年的成绩是按学分多少加权计算绩点吗？
+    - 可以去教务部删选修课的成绩吗
+    - 无挂科选择再修，算绩点时成绩能覆盖吗？
+    - 挂科重修后成绩
+    - 挂科成绩单
+    - 成绩复查之后要在哪查看自己的成绩是否有更改呢
+    - 英文成绩单
+    - 雅思替换大英成绩
+    - 电子图片版“所在院校开具的在读证明“
+    - 关于毕业论文成绩
+    - 在读证明
+    - 学分绩点
+    - 深圳大学学生成绩单与绩点证明
+    - 雅思成绩转换
+    - 学费发票电子版
+    - 成绩复查
+    - 本科在读证明
+    - 成绩自助打印系统
+    - 学费收据凭证
+    - 学活可以打印汇总成绩单吗
+    - 下学期考试的科目的平时成绩录入时间
+    - 急需打印电子版研究生成绩单
+    - 学期中退课后，关于学分费的问题
+    - 毕设成绩
+    - 研究生成绩计算方法，或者研究生绩点计算算法
+    - 六级成绩单怎么补办
+    - 六级成绩单
+    - 如何查询自己学分是否欠费
+    - 英语入学分级考试
+    - 如何知道自己是否缴纳了学分费？
+    - 关于汇总成绩单
+    - 期末成绩
+    - 成绩转换
+    - 期末成绩复查
+    - 成绩变更
+    - 期末成绩查询
+    - 四级成绩单
+    - 成绩查询
+    - 成绩单终端取件问题
+    - 打印成绩单
+    - 百分制成绩单
+    - 成绩转化盖章
+    - 百分制总成绩单查询
+    - 关于学生成绩百分比格式的均分证明
+    - 英文成绩单拼写错误
+    - 成绩修改
+    - 寒招实践成绩
+    - 专业实习及毕业论文成绩是否算入百分制成绩单
+    - 期末成绩查询时间
+    - 成绩单密封盖章
+    - 能否自己打印六个学期汇总成绩单去盖章
+    - 毕业生打印成绩单
+    - 实践课程的成绩是否纳入百分制成绩单
+    - 成绩排名查询
+    - 2020级毕业论文成绩是否会算入大学四年的总成绩？
+    - 休学后本学期成绩
+    - 档案成绩记录
+    - 成长记录中的“全部成绩GPA”与成绩单相差巨大
+    - 雅思托福成绩转换
+    - 计算机二级成绩
+    - 期末成绩无法查询
+    - 成绩公布
+    - 全部成绩专业排名是什么意思？
+    - 期末具体成绩
+    - 考试成绩
+    - 研究生班级和系里成绩排名
+    - 成绩复议
+    - 百分制度成绩
+    - 复查成绩
+    - 百分制成绩查询
+    - 请问自助打印机打印的在校证明是否包含学校的抬头和盖章呢？
+    - 可以他人代打印在读证明吗
+    - 高考日语生
+    - 学费发票
+    - 想知道学费发票在哪里开
+    - 汇总成绩单
+    - 自助打印成绩单
+    - 在校/在读证明
+    - 研究生绩点
+    - 关于《成绩等级制与百分制对照说明》盖章
+    - 学校提供了成绩等级制与百分制对照说明文件，但没有盖章的版本，请问可以提供盖章的版本或者去线下盖章吗？
+    - 成绩等级B及以上的成绩证明
+    - 结业生换领毕业证
+    - 工商管理专业学生学分够了怎么换领毕业证呀？
+    - 成绩复查申请
+    - 均分成绩证明
+    - 请问均分成绩证明在哪里可以下载打印，教务只有分学期的
+    - 关于成绩单打印的疑问
+    - 成绩单打印
+    - 考试成绩查询
+    - 校考教资面试和5月普通话什么时候出成绩
+    - 公众号的入口进去一直显示空白页
+    - 教务部自助下载成绩证明无法登陆
+    - 在学证明
+    - 请问本科生在学证明要在哪里办
+    - 期末成绩什么时候可以出来呢
+    - 请问为什么“深圳大学教务部”公众号登陆不上，想截图，电子图片版“所在院校开具的在读证明“。或者有其他方法可以获得，电子图片版“所在院校开具的在读证明“吗？
+    - 学分学费批扣
+    - 你好？想问一下毕业审核完成在六月份之前，如果大四下学期结束了（七月份）学分才修够，影响毕业吗？
+    - 请问如何获得本人在学校的在读证明
+    - 成绩单问题
+    - 毕业论文成绩是否计入绩点
+    - 预毕业
+    - 成绩复议结果
+    - 大四下有课
+    - 大四下有课的话会不会影响毕业啊？第一批毕业和第二批毕业有什么区别？会影响工作吗？
+    - 关于高考日语生不修大英转日语
+    - 请问大四的绩点计算会包含毕设成绩吗
+    - 关于延迟毕业
+    - 关于延迟毕业的相关问题
+    - 您好，想咨询一下延迟毕业应该如何申请，有什么手续以及延迟毕业有什么限制吗？
+    - 研究生休学课程
+    - 成绩转化 盖章
+    - 请问《成绩等级制与百分制成绩对照表》这个表是可以直接拿去教务部盖章的吗？请问需要去哪里盖章呢？
+    - 雅思报销
+    - 有两门课查不到成绩（管理学院的微观经济学和艺体类大英）成绩单上没有显示，看不到成绩
+    - 生科院2020.9月份六级成绩单发放了吗？哪里领取
+    - 您好，请问去哪个网站可以下载到大学四年的平均绩点、四六级成绩、在读证明的PDF等
+    - 请问预毕业证明从什么地方打印？
+    - 社会实践
+    - 结业生缴费
+    - 请问这学期结业生如何交学分费？？
+    - 学费缴纳
+    - 已申请预毕业，规定学分已修够，可以申请延毕吗？
+    - 专业必修课可以修其他学院的同名课程替代吗？
+    - 创新研究短课是否影响绩点？
+    - 全日制在校就读证明
+    - 成绩换算成5分制
+    - 本科百分制成绩单
+    - 你好，我想请问实践课程包括 军事训练 专业实习 社会实践 学术讲座 毕业设计等的成绩是否会计算入百分制成绩单当中
+    - 学业完成情况
+    - 请问想要知道具体的成绩分数需要怎么查询？
+    - 错过系统扣费如何再缴纳学杂费？
+    - ehall 学业完成情况和毕业审核
+    - 留学盖章
+    - 能否查询自己的学业成绩在本学院的排名
+    - 法语专业转法学专业
+    - 结业生 缴费
+    - 寒招结束后办事大厅中实践成绩里需要上传什么内容
+    - 多出的扩展通识分怎么办
+    - 选择两门MOOC的方法
+    - 考试成绩咨询
+    - 预警
+    - 实践成绩，假期见闻
+    - 我是2018级电子与信息工程学院的。打开办事大厅里的实践成绩但是没有上传入口。文档上传点不了，没有东西。是还没有开放吗，还是要先交了实践考核表才能文档上传？假期见闻有格式吗？
+    - 今天问了我们班的班长，想问一下拿实践学分的事情，他问了老师后，老师是这样说的，”实践学分是需要交实践考核表和假期见闻（电子版交系统）“，但是我在事务中心里只能找到实践考核表，假期见闻的表格没有找到，“交系统""也不明白是交去哪,求解答，感谢"
+    - 普通话证书
+    - 本人于2019年09月24日在校内参加普通话等级测试，成绩为二甲，但一直忘记领取证书，请问现在还可以领取证书吗？要到哪里领取呢？
+    - 社会实践认定
+    - 暑期社会实践
+    - 毛概和形式与政策
+    - 专业实习
+    - 期末成绩申诉
+    - 百分制成绩
+    - 假期下载汇总成绩单
+    - 关于绩点上浮适用范围的问题
+    - 关于绩点浮动及其与留学成绩单的问题
+    - 毕业总成绩打印
+    - 特色班报名表中要求的深圳大学学生成绩单（校内用）与绩点证明在哪里获取呢
+    - 关于均分证明
+    - 请问是否可以根据《成绩等级制与百分制对照说明（2015级及以后）》，将绩点换算为均分，并且要去哪里盖章呢？
+    - 学分学费错过缴费时间会有什么影响，之后补交也错过了，那怎么呢
+    - 绩点重查
+    - 缴学杂费
+    - 成绩单自助打印机
+    - 第二批毕业咨询
+    - 第二批毕业
+    - 研究生在读证明
+    - 交学杂费
+    - 延期毕业
+    - 本人在学校外，如何在内部网打印一份在读证明？
+    - 密封成绩单盖章
+    - 在校证明
+    - 打印毕业证学位证英文证明
+    - 创新创业实践与学生发展
+    - 留学申请的百分制成绩单
+    - 成绩单和在校证明
+    - 大四下学期上课
+    - 学业完成核对
+    - 学业完成度查询
+    - 绩点计算
+    - 请问汇总成绩单是每学期都能打印还是大四下才能打印？
+    - 学业完成查询
+    - 培养方案
+    - 大英期末考试缺考
+    - 2019年6月份英语6级考试证书什么时候发放
+    - 您好，请问今年6月份考过的六级证书什么时候会发放，发放到哪里
+    - 假期见闻
+    - 假期见闻的模板在哪里下载？假期见闻在哪上传？假期见闻提交途径：办事大厅—实践成绩管理（APP）—文档上传（菜单）—上传需要批阅的实践课程文档（文档必须为PDF格式）。可是在办事大厅搜索不到实践成绩管理
+    - 毕业生图像
+    - 毕业生图像有电子版吗
+    - 办事大厅的预毕业怎么找不到了
+    - 新生正式上课时间
+    - 团组织关系什么时候开始转接
+    - 团组织关系
+    - 四六级报名(刚入学研一)
+    - 卓越班制度绩点问题
+    - 毕业礼物是否已寄出
+    - 关于离校办理的团组织关系转接
+    - 专业总人数
+    - 学院党章
+    - 请问政审表需要盖学院党章需要联系哪位老师
+    - 开卷考试
+    - 入党申请
+    - 微专业设置
+    - 六级英语考试相关
+    - 关于创新领航讲座
+    - 课表查询
+    - 毕业生
+    - 义工时
+    - 2019级信管金蝶云特色班培养方案咨询
+    - 数学类、师范专业人数
+    - 深大公章
+    - 事业单位法人证书复印件
+    - 军事理论
+    - 四六级考试交通问题
+    - 新生录取名册获取途径
+    - 派发传单申请
+    - 劳务费
+    - 学生信息变更申请系统开放时间
+    - 软件服务
+    - 入党
+    - 领航讲座
+    - 如题，姓名变更
+    - 彗星楼讲座
+    - 深圳大学宣传部
+    - 入党申请书格式及提交时间
+    - 学杂费流水发票
+    - 统一实习
+    - 学校教材
+    - 关于2022届本科生预计毕业申请及学历电子图像集体采集报名的问题
+    - 困难认定
+    - 关于实习手册
+    - 英语四级报名
+    - 转接党籍咨询
+    - 环境工程研究生
+    - 档案所在单位
+    - 困难认定咨询
+    - 请问困难认定佐证材料的图片类型格式应该是什么？更改了多种图片类型，还是说“文件类型错误”。
+    - 义工时录入
+    - 请假条
+    - 请问请假条申请表格式是否有更新？有最新版的吗？
+    - 请问什么时候可以领取四月普通话考试证书呢？
+    - 普通话测试
+    - 请问什么时候有普通话考试？
+    - 远程教育互动教学
+    - 财务报账
+    - 教务部学籍室
+    - 关于退学档案事宜
+    - 请问专利申请表在哪里下载
+    - 请问社会实践表格的内容是要手写填上去吗，可以打好内容再打印出来吗？实践单位盖的公章可以是电子版的吗？
+    - 实习报告
+    - 请问有实习报告的模板吗？找不到啊。。。
+    - 请问社会实践表在哪里下载……找不到
+    - 教材去哪里找
+    - 教材去哪里找，应该在哪里找到自己的教材？
+    - 研究生延期毕业
+    - 考试周机房
+    - 关于办理退学
+    - 今年第二批领取毕业证时间
+    - 今年第二批能否在7月10号前领取毕业证，因为看到公文通说最迟退宿7月10号。
+    - 研究生毕业要求
+    - 思想政治素质和品德考核表 需要盖公章
+    - 管理学院优秀实习生评选
+    - 请问管理学院优秀实习生评选什么时候出结果呢？
+    - 请问创新基金基础实验项目的项目编号在哪里查询？结项报告有什么要求？
+    - 基层班级服务时数
+    - 学术教育讲座登记册
+    - 传播学院短课安排
+    - 义工时证明盖章相关
+    - 四六级学籍照片
+    - 请问查询全校课程和上课时间地点的方法
+    - 六级报名
+    - 关于大学物理实验（1）开课时间的问题
+    - 硕士毕业生电子图像采集
+    - 土木交通工程学院
+    - 请问出国留学保留学籍年限
+    - 普通话考试准考证
+    - 普通话考试领取的准考试上面没有照片（证件照）会影响考试吗？
+    - 英语竞赛咨询
+    - 毕业论文字数
+    - 四六级
+    - 我校可以不考四级,直接报名考六级吗?(我是英语专业学生,四级证书不太有用~)
+    - 事务咨询
+    - 国际贸易实务课程的网课密码
+    - 四六级相关
+    - 我们学校毕业审核对四六级有要求吗，不考四级会影响毕业吗，本人不是外语专业。
+    - 关于学生假期实践表的填写
+    - 假期实践表中 , 实践内容与收获一栏有无字数要求?
+    - 盖章
+    - 公益之星评定细则
+    - 绩点排名
+    - 请问实习所需的介绍信去哪里开
+    - 如题，寒假实习需要学校开给单位的介绍信
+    - 社会实践报告
+    - 学院要求社会实践提交一张考核表和一篇1500字的实践报告，考核表已经下载好了，请问实践报告在哪里下载？
+    - 教师咨询那里查不到
+    - 论文查重
+    - 实习证明是否有模板
+    - 假期实践考核表
+    - 请问假期实践考核表在哪里下载？在本科生教务下载专区那里找不到
+    - 形势与政策
+    - 关于《马克思主义中国化进程与青年学生使命担当》试卷的疑问
+    - 复学
+    - 数院往年本科毕业论文在哪里，可以看吗
+    - 如题，因为老师要求对其做个参考，具有重大参考意义。
+    - 学历查询
+    - 学生学校劳动收入收税政策及税率
+    - 商品单价超过多少要报固定资产
+    - 沟通心理学
+    - 基层服务义工时
+    - 大物
+    - 财务部社团申请经费规定
+    - 期末
+    - 英专四八级
+    - 英语专业需要进行考级相片采集吗
+    - 实践证明
+    - 请问实践证明的表格在哪里下载？
+    - 体侧补测
+    - 普通话什么时候交费
+    - 留学需要的均分证明可以直接打印吗
+    - 普通话测试报名
+    - 下一次普通话测试报名是什么时候
+    - 计划财务部办公时间
+    - 研究生入党
+    - 研究生入党需要什么文件？入党申请书提交给哪个部门？
+    - 计算机二级
+    - 如何查看校团委指导管辖的学生社团清单
+    - 如何查看校团委指导管辖的学生社团和学生组织的名单
+    - 四六级拍照
+    - 接访时间
+    - 怎么投诉义工时录入人员？
+    - 经院秘书工作时间
+    - 英语四级考试照片采集时间
+    - 毕业实习
+    - 生物医学工程教学实验中心
+    - 困难认定表的相关事宜
+    - 请告知深大中国银行的上班时间和午休时间，感谢！
+    - 实践章
+    - 如何查询自己已经拥有多少个实践章？
+    - 20级大一新生怎么买教材呀
+    - 教材网到现在都没有20级，不知道怎么买教材呀，21号要上课了，有没有师兄师姐可以解答一下呀，谢谢呀！
+    - 外国语学院 入党
+    - 团籍咨询
+    - 新生团籍要交到哪里？什么时间截止交
+    - 深大logo下载
+    - 请问绩点上浮结果什么时候出来？
+    - 出国留学证明
+    - 关于社会实践
+    - 参与第九届中国国际新媒体短片节高校日活动是否可以算作一次社会实践
+    - 专业排名
+    - 实习与课程冲突
+    - 四级相关
+    - 思修的形势与政策
+    - 教材
+    - 全校方案查询进不去？
+    - 关于期末考
+    - 深大测试中心
+    - 导师没在列表中无法预约设备，打测试中心电话无人接。
+    - 返校后考试
+    - 是否可以推迟注册时间
+    - 社会实践报告下载
+    - 请问社会实践报告的模板在哪里下载呀？
+    - 优博计划半年奖金计财处在8月份还能下发了吗
+    - 实习证明要求
+    - 毕业的专业实习证明的格式要求
+    - 关于第二批毕业生领取毕业证时间的问题
+    - 高水平运动队相关事宜
+    - 在“i深圳”系统里上传应届毕业生接收的个人电子材料时，显示材料不全，无法上传；此外，报到证需要上传反面，但我是电子版的报到证
+    - 户籍复印件
+    - 毕业手续
+    - 【毕业证书】能否提前获取扫描件
+    - 第二批毕业领证时间
+    - 今年第二批毕业证什么时候可以领，会不会被疫情影响推迟
+    - 四六级考试
+    - 档案姓名问题
+    - 关于延毕返校提交纸质申请表
+    - 请问教师实习的问题
+    - 英语四六级考试
+    - 政审表
+    - 义工时认定
+    - 实习补贴领取
+    - 论文格式
+    - 深大图标下载
+    - 内部网首页的彩绘深大图片以及深大图标在哪里下载？做毕业答辩ppt
+    - 普通话考试
+    - 结业转毕业
+    - 学杂费及住宿费扣除
+    - 代取物品
+    - 专业实习是否有固定的时间？以及时长要求？
+    - 结业证换毕业证
+    - 有机化学
+    - 办事大厅无法进入
+    - 个人学业完成查询
+    - 办事大厅的个人学业完成查询项目没了，怎么看
+    - 研究生毕业论文 学位论文封面、承诺书下载
+    - 关于学位论文的封面、承诺书等相关资料的下载链接。
+    - 16级假期实践（假期见闻）
+    - 毕业图像散排
+    - 毕业图像个人散排怎么弄？
+    - 学历证书电子图像
+    - 学历证书电子图像如何上传
+    - 录取通知书
+    - 美学概论
+    - 陈海静老师的美学概论有期末考试吗？
+    - 大英挂科与英语四级考试
+    - 院办办公时间
+    - 毕业设计
+    - 深大抬头信纸电子版
+    - 现实表现及鉴定
+    - 形势与政策的试卷可以直接交到老师办公室吗
+    - 选修课期末论文
+    - 报告封面
+    - 请问报告的封面在哪里下载呢？
+    - 实习证明
+    - 假期去兼职但是不是与本专业相关的，可不可以开实践证明？(用人单位愿意盖章的情况下）
+    - 前段时间因为家里购房的问题要回家签合同，有一节课和老师说明了但是因为临时知道的没开假条，请问这种事由可以请假吗，可以岀示船票信息但是不能岀示合同证明
+    - 我错过了自动扣学费的时间段，这两天在网上自行缴费也显示失败（已经四五次了），系统总是提醒说“账户借贷方已冻结”，请问以下这是为什么呢？是否是因为学校还未开通自行缴费的通道呢，还是其他原因呢？麻烦您了！谢谢
+    - 按照公文通的意思是11月29到12月2号每天下午都会批扣，那如果29号账户余额不足，1号账户才有余额，29号扣费不成功1号会再次扣费吗？
     - 教学教务相关问题
     - 学校教材
     - 大四下有课
@@ -64,11 +678,9 @@ nlu:
     - 请假
     - 法语专业转法学专业
     - 困难认定
-    - 生源地回执
     - 深大测试中心
     - 优博计划半年奖金计财处在8月份还能下发了吗
     - 高水平运动队相关事宜
-    - 转出专业名额
     - 六级证书
     - 第二批毕业
     - 本科论文查重报告
@@ -82,7 +694,6 @@ nlu:
     - 医学人文电子资源
     - 查课表
     - 计软院教务处工作时间
-    - 困难认证
     - 形势与政策的考核方式
     - 毛概
     - 毕业
@@ -106,27 +717,19 @@ nlu:
     - 分学期绩点的专业排名查询
     - 日语n2考试过了如何报销
     - 社会实践
-    - 大英
     - 关于思修的问题
     - 教务部
-    - 免修
     - 学校宣传部工作时间
     - 期末
     - 四六级照片采集
     - 普通话测试报名
     - 延毕国考
-    - 延毕学生校园码
-    - 关于非主选放位
     - 毛概和形式与政策老师不一样
     - 研究生
-    - 数学文化赏析
     - 关于第二批毕业生领取毕业证时间的问题
     - 【应届生毕业】毕业证明
     - 本科生第一批毕业证发放时间
     - 无法准时提交论文会怎么样
-    - 计生证明办理
-    - 学习通
-    - 运动生理学的网课群
     - 中国大学mooc学生认证不了
     - 办事大厅无法进入
     - 微信群
@@ -166,7 +769,6 @@ nlu:
     - 公益之星评定细则
     - 寒招什么时候开始，怎么联系相关人员
     - 普通话证书帮拿
-    - 重修
     - 假期实践考核表
     - 普通话测试报名
     - 研究生教材
@@ -190,10 +792,8 @@ nlu:
     - 关于项目结题报告模板下载问题
     - 证明
     - 毕业生信息确认
-    - 研究生英语免修考试
     - 关于“生源信息确认”的特殊情况的疑惑
     - 关于马克思主义基本原理
-    - mooc
     - 网页缴学杂费失败
     - 无法打开补交学杂费网页
     - 第二批毕业生什么时候去学活领报到证
@@ -204,7 +804,6 @@ nlu:
     - 软件服务
     - 提前毕业
     - 更改姓名后学籍信息更改处理问题
-    - 关于高考日语生不修大英转日语
     - 就读证明开据
     - 普通话
     - 远程教育互动教学
@@ -331,13 +930,11 @@ nlu:
     - 2019年困难认定问题
     - 关于出国推荐信
     - 全国大学生英语竞赛
-    - 体测数据
     - 预毕业
     - 军事理论
     - 申请优秀学生干部的两个问题
     - 大四学生学籍更改
     - 义工时录入
-    - 复学考试
     - 中秋补课安排
     - 如何开无课证明？
     - MOOC
@@ -371,7 +968,6 @@ nlu:
     - 实践证明
     - 询问表格下载位置
     - 雅思
-    - 挂科记录会影响一些申请资格吗
     - 证书丢了
     - 结业生缴费
     - 结业生与毕业生的区别
@@ -443,7 +1039,6 @@ nlu:
     - 在校证明
     - 专业必修课可以修其他学院的同名课程替代吗？
     - 是否可以推迟注册时间
-    - 注册
     - 实验班
     - 非师范类专业可以转入师范类专业吗
     - 入团
@@ -453,11 +1048,9 @@ nlu:
     - 请假的一些相关事务
     - 大英期末考试缺考
     - 军事理论
-    - 大四下挂科会怎么处理
     - 毕业本科生证明文件打印问题
     - 大概什么时候才能在自助系统打印呢？
     - 出国留学文件证明事宜
-    - 身份证丢了，新的还未办好，怎么参加体测？
     - 教材网余额
     - 教材网如何充钱支付
     - 帮同学打印在校证明
@@ -466,9 +1059,12 @@ nlu:
     - 视听说密码忘记
     - 绿色通道
     - 我想知道在哪里看往年的外院优秀毕业论文呢
-
-
-
+    - 成绩复查之后要在哪查看自己的成绩是否有更改呢
+    - 成绩单
+    - 期末mooc成绩出现问题
+    - 挂科导致下学期选课学分
+    - 本科生课程成绩认定
+    - 查看学分
 
 
 - synonym: 如何
