--- a/data/nlu/course_selection.yml
+++ b/data/nlu/course_selection.yml
@@ -101,6 +101,349 @@ nlu:
 
   - intent: 选课事宜/其他
     examples: |
+      - 哪里能查询到专业课介绍的内容
+      - 是否课程号一样的mooc可替代公共必修
+      - Bb上发布的作业哪里看
+      - 哪些是非学校教务部统一安排期末考试的课程呢？
+      - 丽湖跆拳道的课程现在是规定线上还是线下呢？
+      - 英语能否改成日语
+      - 找不到课程群
+      - 请问测控专业的三个专业方向怎么选择，在什么地方选择，以及怎么才能知道各门专业选修课分别属于什么专业方向
+      - 专业选修课属于什么专业方向
+      - 小语种代替英语
+      - 请问深大毕业实践学分的获取渠道都有些什么呢？除了做义工和寒招？
+      - 想要申报本科生创新创业学分，但不知道在哪里申请
+      - 双修了人力资源专业，在培养方案中的专业核心课要求学分是20，但是点开详情后里面的必修课学分总共有30分，想请问是要选所有的必修课还是只用从中选20分的课就可以了？
+      - 请问军训学分等级如何评定？如何能拿A？
+      - 为何我的学分上限是28分，其他人都是32分？
+      - 想请问一下，校级的科研比赛如果是两个人一起的，这两个人都可以用这个抵扣创新创业学分吗
+      - 想问一下如何查看自己的创新学分呢？不是项目团队负责人，是项目成员，如何确保自己的学分成功申报，申报后如何进行学分的转换呢？
+      - 学业要求的专业实习学分要怎么拿？
+      - 对于港澳台学生来说，可以在毛概和形式中修一门，另外一门用其他学分补充吗？
+      - 我在暑假期间参与了社会实践，请问实践学分怎么申请？
+      - 专业选修课
+      - 寒假参加了寒招活动，想要申请社会实践认定，想知道具体的申请时间
+      - 请问拿实践学分的相关内容
+      - 我是2018级参加军训时申请了免训的学生，但在办事大厅的学业查询中发现军事训练显示未通过（等级为F）。请问这个对于免训学生正常吗？如果免训没有这个学分应该怎么补呢？
+      - 军训免训学分
+      - 上学期修了一门拓展通识课但转专业后并没有这个学分，以及这个学期还需要重修大英吗？
+      - 申请了生源地贷款，无法登陆选课
+      - 社会实践学分怎样才可以获得呀？具体可以做哪些社会实践活动？
+      - 公共选修与专业选修
+      - 雅思成绩申请了英语免修后还需要参加考试吗？如果需要，考试成绩会覆盖申请免修的成绩吗？
+      - 英语免修申请后成绩能被覆盖吗？
+      - 如果选了28.5分最后按28.5分算还是28分
+      - mooc高数a和必修课高数c的学分一样都是必修学分吗
+      - 你好，我是日语高考生，经过了一个多月的大学英语学习感到非常困难，视听说只能听明白几个简单的单词但大学英语又是本专业必修课程，现在能改修日语吗？可以的话去哪里办理呢？
+      - 课程替代
+      - 创新研究短课
+      - 需要重修的专业必修课，可以修读其他学院的同名同学分课程替代吗？
+      - 可以申请一学期修两门拓展通识课吗，去哪里可以申请
+      - 据说绩点高的话下一学期的学分上限会被提高，请问相关的具体规则是怎么样的？
+      - 请问，结业生回学校修学分有时间要求吗？例如需要在几年之内修完？
+      - 请问什么活动可以被视为社会实践？如果培养方案要求两次实践，是否需要两次实践为不同活动内容？见闻报告应该提交到哪？需要提供什么证明吗？怎样才能申请到社会实践学分呢？
+      - 挂科重修
+      - 重修
+      - 如果没有报自己学院的专业必修课，报另一个学院开设的同名课程，两个课程要求一样，学分一样，但课序号不同，可以用别的学院课程替代本学院课程吗？
+      - 请问大四下修创新短课有什么影响
+      - 大四下修创新短课
+      - MOOC学分
+      - 国家级大创的创新创业学分可以在哪里提交认定申请呀？
+      - 去交换的学校毕业总学分为20，每个课程的学分设置比较低（一般在0.5,1分左右），如果课程设置教学大纲相同，是否可以转换为深大相应课程学分
+      - 高考外语考日语的，请问大学可以不学英语学日语吗
+      - 关于重修专业课的问题
+      - 学分替代
+      - 对于其他课程的学分的疑惑
+      - 学分替换
+      - 实习学分识证
+      - 创新创业学分
+      - 实践学分
+      - 个性学分
+      - 学分是否会被替代或不算入毕业要求学分中
+      - 实习学分认证
+      - 创新学分事宜
+      - 短课学分认定
+      - 学分认可
+      - 加学分
+      - 创新短课学分问题
+      - 选修学分
+      - 交换学分转换
+      - 短课学分折抵
+      - 短课学分
+      - 交换学分认定
+      - 2017社会工作的个性学分
+      - 寒招学分认定
+      - 拓展通识与个性学分
+      - 发展心理学学分
+      - 实践学分的用途与获得方式
+      - 经常听到“实践学分”相关，但它究竟是什么呢？大一新生对此一无所知，是每个学院都需要的吗？也与毕业相关吗
+      - 请问综合选修学分、实践学分算入方案的哪个分类？
+      - 创新短课学分折抵
+      - 多出来的专业选修学分能否算作个性学分
+      - 你好  我想问下学校会有加学分什么的吗  具体哪些活动能加
+      - 实习请假与实习的学分认证
+      - 学分上限
+      - 创新学分申请
+      - 学分查询
+      - 平面构成学分问题
+      - 关于自主实践管理学分抵扣申请
+      - 学分转换
+      - 学分认证
+      - 学分收费
+      - 学分折抵问题
+      - 毕业实践学分
+      - 竞赛学分折抵
+      - 深圳大学本科生创新创业学分认定办法(修订)怎么查看
+      - 学分认定
+      - 选修学分计算
+      - 办事大厅学分完成查询应用不见了
+      - 学分证明
+      - 必修学分
+      - 学分奖励
+      - 大四学分问题
+      - 拓展通识mooc计入个性学分问题
+      - 创新短课学分认定
+      - 结业生回校修学分
+      - 管理学院社会实践学分
+      - 关于基本实践课程中的社会实践学分
+      - 数学分析1开课情况
+      - 托福转换大英学分那大英还需要选课和上课吗？
+      - 校公选课算选修学分吗
+      - 选课学分相关
+      - 复学学生选课时学分超出
+      - 没有在选课系统上选到的慕课，但是自己又有兴趣，可以自己在uooc平台上选课并观看吗，这个会属于成绩的一部分吗
+      - 办理了生源地贷款并提交了缓交学费申请，未交款，选课系统登不上？
+      - 短课认定学科专业选修学分问题
+      - 课程学分
+      - 体育课学分问题
+      - 交了学费选不了课
+      - 本学院短课是否需要另行申请审核计入选修学分？
+      - 请问关于数院课程学分认定的问题我该联系谁呢？怎么联系？谢谢您的帮助！
+      - 经院接受微观经济学慕课的学分吗？
+      - 个性课程学分
+      - 体育课学分修改后总分差零点五分要怎么处理
+      - MOOC香港基本法是否算入法学院的专业选修学分
+      - 体育课学分变动问题
+      - 怎么查询自己本学期已选学分
+      - 选了古代文学（3）和中国古代文学（唐宋文学），咨询了老师说有可能会出现专业课认定冲突，请问这样毕业学分认定会出现问题吗
+      - 非拓展通识课和拓展通识课的区别是什么啊。我是21级外院的学生，毕业前这两类要修多少学分呢？
+      - 非收费实践课程
+      - 请问学院在统计学生学分是否达到学业预警或暂缓退学的要求时，会加入非收费实践课程来进行计算吗
+      - 如果毕业之前因为选课困难一直没能修满MOOC和选修课要求学分，可以用个性学分替代吗？
+      - 非拓展通识课
+      - 非拓展通识课属于个性课程嘛 非拓展通识课的学分属于个性学分嘛
+      - 您好，有看到说明“超过培养方案要求后多修的扩展通识课会计入个性课程学分”，但是在 学业完成查询 中多修的拓展通识课学分仍归在拓展通识课处，并未归在个性学分里，导致学业完成查询里显示的个性学分少于专业要求。请问这是什么情况呢？听说毕业审核依据学业完成查询系统，那毕业审核时，多修的拓展通识课学分会归入个性学分吗？谢谢！
+      - 专业限选课
+      - 请问专业限选课是必选吗？在选修学分已修够的情况下如果不选或者挂科会影响毕业吗？
+      - 结业选课
+      - 第二学期已申请毕业，但必修挂了，现在能作为结业生选课吗？结业生选课系统开放了吗？（另：办事大厅里没有看到周期服务-结业生选课这一项内容）
+      - 拓展通识课学分认定
+      - 在学业完成查询中拓展通识课的认定学分为0，但是已选过积极心理学和发展心里学两门拓展通识课。
+      - 您好，培养方案中只能查到一部分，选课系统无法登录查看，请问选课后每个课程学分在哪里查询呢
+      - 选课证明
+      - 怎么开具选课证明呢
+      - 关于重修问题
+      - 错过网上评教是否能补？
+      - 错过了2022年第一学期的网上评教，请问是否能补，不能的话，下学期的选课或者交学费是会受到影响吗？
+      - 转专业选课问题
+      - 您好，我是大一转专业到法学的学生。在本学期选课遇到以下几个问题： 1.我要补上的大一两门必修都落选了，可选的老师客容量已满，其他老师的时间段都和我本学期的课程冲突，是否可以申请两门免听呢？ 2.我的学分也不够选大一的两门必修，可否超出学分限制，因为方案内要求要修的选修还差10门，不想退掉已选上的选修。
+      - 请问20级的同学创新短课转换成专业选修的学分最多可以转几分？
+      - 关于通识课和选修课学分认定
+      - 我的专业选修课里有积极心理学（课程号9900670001）这一门课程，MOOC选课上也有积极心理学一门课，归属于社会科学类。 我想知道如果选修了积极心理学，学分认定是属于专业选修课还是属于拓展通识课里的呢
+      - 课程学分是否重复
+      - 我修了课程号0201250004的专业选修课基础会计学和课程号 9900050001的慕课基础会计，请问这两门课学分会重复吗？
+      - 没有挂科可以重修吗
+      - 没有挂科可以重修吗，绩点怎么算
+      - 转专业选课
+      - 大三上学期转去传播学院的，原本第二学期需要修的三门必修课《设计基础》《美术基础》《市场营销学》都没有开课了，请问有有替换学分的课吗？还是说大四会再开课
+      - 公选课一定得选吗
+      - 您好，我是一名大一学生，很抱歉打扰您了，我想问的问题有四个，第一个是师范专业转师范专业，师范生身份会更改吗？第二个是转专业后原本专业所学的课程学分还算吗？第三个是原专业与所转专业如果有重合的专业课，还需要重修吗？第四个是为了学习想转专业的课程而放弃不在选课系统里选原专业的专业课程，万一转专业没有成功，放弃选的课又没有时间重修怎么办？非常希望您能解答我的疑惑，谢谢您！！！
+      - 想问一下“马克思与青年化进程”这门慕课挂科了 ，重修以后能覆盖挂科记录吗？
+      - 老师您好，想问一下在优课联盟上选了沟通心理学，但是还没有看完视频，没有及时看完视频，今天发现课程已经结课了，这个Mooc的学分最终会算入期末的成绩吗，还有对最终的绩点影响有多大。 还想问一下心理学的Mooc是不是四年期间必须修够一分，下学期可以再修吗？还有每学期Mooc最多可以修多少分，期末的绩点成绩是怎么算的呢？ 非常感谢！！
+      - 关于未挂科但想重修的问题
+      - 请问没有挂科的科目可以重修吗，重修之后绩点怎么算
+      - 想问一下目前创新短课的学分是已经折抵到专业选修课了吗，因为目前学业完成查询中专业选修课显示还缺了分，实践成绩单上可以看到短课学分
+      - 慕课中了两个心理学可以一起修读吗
+      - 若因为挂科而进行课程重修，即使重修的课程考试通过，是不是也只有D
+      - 我是一名由别的学院转到外国语学院的学生，想补回大一的课程，加课也已经申请了，但是发现超过了限制学分4分，去教务处申请提高限制学分，但老师说只有双学位的可以加，请问我们转专业的学生该如何补回大一的课程呢？
+      - 重复课程
+      - 数院开的概率论与数理统计这门课的学分可以转化为管院开的这门课的学分吗
+      - 关于课程开设
+      - 若所需修读的学分是大一课程。而大一新生的培养方案修改，没有这门课了。那还会开设这门课吗，不开设的话，学分可以取代吗
+      - 关于经院双学位选课问题
+      - 经院那边提到 只能选择经院的开设课程 但是选课系统中辅修双学位处有部分管院开设课程，是否可以替代
+      - 我想问一下免听的学分是包括在限制学分32内吗，就是说我现在比如已经选了29分，但是我还想修一门4学分的课程，然后我4学分课程我申请免听，那这样我就不用在选课系统上选这门课程了，所以，这样是可行的吗？
+      - 合格课程重修
+      - 老师您好，我想重修之前修过且考试合格但成绩不理想的一门课程，这个学期是有开课的，但是选课系统上无法选择这门课，请问怎样才能选到？是要找任课老师申请吗？总（四年）成绩单上会出现两次的成绩吗？还是只出现第一次的成绩？
+      - 2018级金融学的专业选修要求30学分，我修了31分，请问这多出的一分会计入个性学分吗
+      - 请问： 1.校公选课是否没有选课门数上限？ 2.校公选课的学分属于培养方案中的哪一类学分？
+      - 请问方案外的同名课程能代替重修吗？
+      - 我需要重修C语言。我的现在的重修课程里没得选C语言，但我发现方案外课程有，而且老师、学分一样，请问我可以选方案外的C语言来代替重修课程吗？
+      - 我大一上学期时申请了大英转日语，文件中提到可以替代大英的课程为日语2、3和日语高级读解，上学期我因课程冲突没能去上日语高级读解，这个学期选课发现这门课没有了，请问是改名了还是这学期不开这门课？如果不开的话什么时候能再开让我补上这部分的学分呢？
+      - 请问临床医学的学生修的慕课高数A可以记作个性学分吗？
+      - 双学位选课
+      - 经院和管院有很多课程的重复，在培养方案中，有分专业选修课和专业必修课，那么，如果专业必修课的学分不够的话，可以用选修课的学分来补上吗？
+      - 请问0700350001的日语（二外）算不算扩展通识课的学分
+      - 我是数学与应用数学师范专业的，发展心理学是我们专业的必修课，想咨询一下校公选课的发展心理学mooc课的学分能不能顶本班课程发展心理学的学分
+      - 我在全校公选课上选了香港法概论，但是在全校课程表上显示该课是专业选修课学分，公选课没有显示该课程类别，请问我作为一个外院学生，这属不属于基础通识课，能不能算在毕业必修学分上？
+      - 体育课上学期选了篮球，这学期选篮球还有学分吗？
+      - 请问未完成网上评教只是不能预选还是同样无法参加正选呢？如果想要选课能否重新开放评教
+      - 近代史为什么又出现在选课里且为本班课程，第一学期已经学过了
+      - 拓展通识课学分修不够
+      - 关于限选课挂科
+      - 我有一门限选课在大三挂科了，然后重修还是过不了，我的选修学分早已经修够了，其他也都符合毕业学分要求，请问这门挂了两次的限选课会影响毕业吗？
+      - 关于欠费无法进行选课
+      - 我想进入选课系统发现提示由于·欠费无法选课，但我学分学费+基础学费和住宿费都交齐了，请问是怎么回事？
+      - 请问《品读聊斋》是不是拓展通识课程？
+      - 选上这门课后，在选课系统里找不到这门课了，看不到它是不是拓展通识课程。
+      - 关于选课系统因为欠费而无法登陆的事情
+      - 我选了第一轮课程，但今天想进入选课系统发现提示由于·欠费无法选课，但我查询中国银行扣费记录发现并无欠费（学分学费+基础学费和住宿费都交齐了），请问是怎么回事？
+      - 请问军训如果挂科了能够用其他类型的课程来补上学分吗？还是只能重修？
+      - 校公选课那些标识着拓展通识课是否算入拓展通识课的学分？
+      - 想修同院但是在方案外的专业选修课，是否可以替代本专业选修课的学分？
+      - 综合选修学分是否和非拓展通识的MOOC学分等同？_x000d_寒招的实践学分是否算入基本实践课程-社会实践/国际交流？_x000d_请问还有什么途径可以获得实践学分呢
+      - 创新奖励学分折抵专业选修学分
+      - 你好，我的创新奖励学分已经申请通过并在实践成绩单上显示，这是代表我已经可以折抵专业选修学分，还是需要另外申请才会算进我的学业完成呢？
+      - 19级已完成军事理论的实践课程，但是没有录入
+      - 19级学生已完成军事理论的实践课程，在内部网学业完成那里显示未修读。现在连2019级新生优秀学员名单都出来了，该录入的到底要什么时候才能录入？
+      - 关于大英转日语
+      - 1.我于前日办理了大英转日语的手续，教务处的老师告诉我直接把英语退课处理，但这个学期无需再选日语课程，从下学期开始再修读日语课程。那么请问我这学期的学分是不是就直接减少了五分呢？如果是的话，有没有办法再把这些学分补上呢（因为去掉五分之后的学分对于大一生的确太少了）？会对后续的绩点等有影响吗？2.我有意愿修读广告、日语双学位，请问将大英转为日语后会不会有影响呢？
+      - 创新短课
+      - 想问一下本学院老师开设的创新研究短课所获学分如何折抵专业选修学分？短课学分会自动折抵专业选修学分吗？一般什么时候可以折抵专业选修学分呢？折抵专业选修学分还需要本人提交申请或者操作什么吗？希望能帮忙解答一下，谢谢！
+      - 我已经在上学期修读过一门专业选修课，但是在学业完成查询的地方没有显示出已修读的学分怎么办？
+      - 关于mooc
+      - 你好，我是大一新生，我在选课系统没有 选思修课程，但是在mooc上面参加了这个课程，请问会计入学分吗？还是，我应该退出mooc的这个课程？
+      - 创新短课的学分如何认定为专业选修课的学分？流程是怎样的？
+      - 退课
+      - 老生现在是补选阶段 但补选阶段无法退之前已经选了的课程 现在因为个性学分修够了所以想退一门公选课 该怎么办
+      - 日语高考生大英可以换日语吗？英语真的过不了，还有那个视听说可以换吗？
+      - 专业选修课可以选公共选修里的课来修吗
+      - 选课咨询
+      - 慕课高数A和高数B算是虽名称有所不同，但教学内容大致相同的课程吗？专业课高数B，但想选高数A的慕课，怕不记学分。
+      - 请问结业生在选好课后如何进行缴费？我用深圳财政缴费总是失败
+      - 补考成绩21号前出，我们选课20号就结束，我们是该重修呢还是不用重修呢
+      - 复学后选课
+      - 我已经办理完复学的相关手续，并且已经交了学费，请问我什么时候才能选课呢
+      - ，超过培养方案要求多修的扩展通识课和专业选修课也会计入个性课程学分。这个慕课的拓展通识课也可以转为个性学分吗？
+      - 在办事大厅上只有本学期选课课程如何查看上学期的补考
+      - 老师，您好！我已经申请了生源地贷款并提交了缓交学费申请，为什么还是未注册，选课系统无法登陆。请问这应该怎么解决？找谁解决？
+      - 老师，您好！我知道转专业后，高等数学A的课程学分能够直接转为高等数学C，请问慕课也是这样吗?也就是我上学期修了高数A1的慕课，还需不需要修高数C1。望解答，谢谢！
+      - 我大一上下两个学期都选了同一门体育课（羽毛球俱乐部），请问是算一门课的学分还是两门课的学分，我这个学期再选还会不会加有效学分
+      - 您好，我打的拓展通识课多修了1.5分，请问这个分数最后会补到个性学分那里吗？
+      - 已经报道注册了，申请了生源地贷款，学费未交，无法登陆选课页面，要怎么处理呢，谢谢！
+      - 您好！一般一学期是只能选择一门MOOC的，但我因为急需个性学分想要申请两门MOOC（扩展通识类），请问是否可以通过线下途径申请？或许向任课老师递交加课申请可以吗？
+      - 我想请问，如果大二下拿了学业预警。_x000d_大三上还可以只选几门少数量的选修课，缓解一下压力吗。_x000d_按学年达不到二分之一学分退学的话，大二下和大三上不算同一年，这样会被退学吗
+      - 结业  选课
+      - 请问结业生这学期应该如何选课？
+      - 病原生物与人类健康对17级是否算拓展通识课
+      - 之前拓展通识课名单里是有病原的且朋友也选了算入到了拓展通识学分里，但是这次选课看到这节课类型为非拓展通识课，请问对17级的来说到底算不算入拓展通识学分
+      - 你好，我想问下学期成绩公布后是否还可以选课？
+      - 您好，我想问一下，申请学习之星奖学金的话，对选课学分有要求吗？比如说上一年选课不够多少分的话，不能申请学习之星。奖励学分那是有学分限制，得满15分才行，如果选课学分不满15分的话，奖励学分按什么比例计算？谢谢。
+      - 您好，请问体育课再次修同一位老师的同一门课程，学分是否能正常获得？可以四次都选同一位老师的同一门课程吗？
+      - 这门课在原本方案里是必修，课程编号为0503650001，但是今年选课变为选修，课程编号为0503650002，这个时候学分在方案里如何计算？大四了学分很重要
+      - 外院学生，这学期选了德语二外，但老师说因为人手不够下学期二外课没有德语，只能选大学德语。但大学德语是公选课的学分，这样一来专业选修课的学分就会不够。有学姐说可以咨询教务能否转换成选修学分，想请问一下应该如何转换呢？
+      - 你好，老师 ！我想问一下如果在选课时没有选本专业的课，都是选另外一个学院的课，期末绩点排名怎么算？
+      - 我选的《菜根谭》因为错过考试而挂科，需要重修吗？如果不重修挂科会有记录吗？记录的话会有什么影响？（《菜根谭》算拓展通识课吧？）
+      - 您误解我之前提问的意思了。我现在是大一下的学生，报名了转专业。但是听学长学姐说一般选课都是期末后进行，届时我还没有完成转专业考试，仍然需要选择原院系的课程并在大二上学完吗？那这样的话如果我转过去了，我转专业后院系的选课课表没办法向我再次开放了，我只能等到大二下才能上目标院系的课了嘛（比如我现在是外院的学生，我转到法学院了，结果我因为考试推迟还是只能选外院的课程，转专业到法学院后还是要上外院的课嘛？）
+      - 关于慕课选修的咨询
+      - 我在教务系统选择了一门慕课，但期末发现有同名的，自己好像选择错误了，现已结课，导致该慕课成绩应该为0，请问有什么补救措施吗？
+      - 关于uooc选课
+      - 我本身并未在选课系统上选建筑艺术与赏析这门课，但是今天忽然发现在uooc上好像是是什么时候不小心选上了这门公选课，然后成绩居然都已经公示了，我想点退课却显示退不了，成绩上显示零点几分……想请问一下，这门课如果没在教务系统上选的话，应该不会算成绩吧……
+      - 请问为什么高数直播课程课时是满的，还要上高数慕课，而且慕课还计入成绩。其他部分课程是直播课和慕课结合，课时各一半。
+      - 免听课程学费问题
+      - 学校开课前的公文提到，本学期如果不回校交免听的书面材料，免听就不算数。而我这学期想放弃免听的课程，请问这时候的学分学费怎么算
+      - 老师您好 我是师范学院的2020届毕业生学生，本专业的学分已经修满了但是大四下学期选了两门非本专业的需要期末考试的慕课选修课，请问我是不是可以第一批毕业呢？
+      - 我是电子与信息工程学院的学生，选了一门公选课发现是已经学过的内容，课程总号相同，不计入学分，所以想问问现在可以退课吗，要退课的话要以什么方式呢？谢谢了！！~~
+      - 想请问一下 我大一上学期休学这学期复学的，在选课时选了上学期的必修课高数A1 后超出了限制学分，介于下学期再选这门课可能也会超出限制学分，能否在这学期增加我的限制学分上线？
+      - 你好我是大四学生 我因体育课差了0.5现选了一门1分MOOC（半学期上课制的） 是否影响我毕业呢？听说这要第二批毕业了 如果第二批毕业，是否影响与同班同学排毕业照、和校长领毕业证书呢？感谢回答！
+      - 创新短课学分如何抵扣专业选修学分，如何操作？
+      - 请问拓展通识课如果比培养方案多修了一分可以算到个性学分吗？（是修了一门2分的课想一分给拓展通识一分给个性）
+      - 你好，想请问一下大四下学期还能选课上课吗？如果可以的话，大四下学期剩多少学分待选不会影响毕业呢？大四下学期还上课对于毕业论文、出国申请、拿毕业证学位证等有什么影响吗？
+      - 你好，请问“学业完成查询”中要求我修的课程和选课系统中我所选的课程两者课程名字相同但是课程编号不一样，那修这门课会计入相应的学分吗？我有一门课程是会计学原理，在学业完成查询中显示为专业选修课，但是我在选课系统中选到的为综合选修课，这样的学分有效吗？
+      - 免听成绩咨询
+      - 您好，想咨询如果我申请免听的话，平时成绩如何计算呢？（是没有平时成绩吗？）或是有上限多少呢？ 谢谢
+      - 想问下办事大厅的学业完成度查询怎么没了？什么时候可以使用呢？选课前可以看到吗
+      - 下学期要转专业，下学期选课可以不选原专业的专业课，选要转的专业的专业课吗
+      - 一带一路政治经济专题慕课
+      - 培养方案上，个性课程的要求是：非本专业开设的专业课程，请问我在修完最低的专业选修学分以后，多出来的专业选修学分属于个性学分吗，可计入毕业学分要求吗？谢谢
+      - 主动申请重修
+      - 你好，我的专业选修显示已修学分10分，查看课程显示已通过的课只有4门(共8分)，同专业的同学也比我少两分，想知道我多出来的两分在哪里，还是出了bug,谢谢
+      - 拓展通识课学分
+      - 我想问下我的拓展通识课学分修够6分后，再修的拓展通识课的学分会归为个性课程吗？还是依旧属于拓展通识课的学分？
+      - 每一学期选课都要至少达到15学分才有资格评选奖学金吗
+      - 预选课欠费
+      - 预选课登录不进去，显示“欠费无法选课”
+      - 我目前学分已经修够了，第八学期不打算继续修读课程了。请问哪里可以开第八学期无课程的证明？出国申请需要用到。谢谢
+      - 慕课挂科可以重修吗？
+      - 课程内容查询
+      - 老师好，请问如果现在办理休学，本学期选的课是否全部挂科？
+      - 请问新生正式上课是10月8日还是抢课阶段后?
+      - 可以选小语种课程代替大学英语课程吗？如果可以，申请流程是怎样的？
+      - 求老师电话进课程！
+      - 大物的mooc有课程群吗
+      - 丽湖体育课线上还是线下
+      - 课程编号
+      - 请问课程名称相同，但是课程编号跟培养方案里的课程编号不同，也能算同一门课吗？
+      - 慕课 生命的律动 深圳大学/莫蓓莘
+      - 可以加课吗
+      - 请问线下的创新领航讲座什么时候能够重开？或者课程时间会因为疫情延长吗？
+      - 一分慕课
+      - 在办事大厅-课表查询中无法选择选项，输入老师名字后没有显示，请问有什么办法看到学院的课表？
+      - 选了跨校区的课，但是通勤车没有恢复通行，那要怎么去上课呢
+      - 网课找不到课程
+      - 张守奎老师的马克思主义基本原理 腾讯会议上找不到课程 急
+      - 2019级信管金蝶云特色班培养方案中有备注必须修读金蝶特色课程，但下一行又说金蝶特色的进阶课程建议学生选读，那么被备注为进阶课程的选修课如演讲与沟通技巧是必须修读还是建议选修？
+      - 物理重修
+      - 物理重修可以选择慕课嘛
+      - 每次进去都是null 计算进度为0 而且点进去很多之前学期修过的课都没有显示出来 也没有计入分数怎么办？
+      - 根据规定：MOOC课程限选1门，但学校允许因疫情原因不能按时返校的学生选修2门MOOC课程。现同时选择了发展心理学和生活心理学但一直没有看到也没有加入生活心理学的学习，是否可认为该门课程作未选择/无效处理而不至于挂科
+      - 课程编号去哪里查询呢
+      - 心理课在课表上还要在线上上课吗?
+      - 心理课在课表上显示9周11-12节，是要线下和线上都要上的意思吗？
+      - 请问丽湖校区如何预约A6的课室
+      - 课程表上的远程教育互动教学具体是什么个情况呢？是需要去哪里上课吗？还是在哪里可以找到智慧教室？
+      - 领航讲座线下课没有上够的怎么办 会影响什么吗 还有机会上吗
+      - 想咨询一下多媒体技术及应用这门课程的相关问题 有看到开课单位是师范学院（教育学部）的 于是想电话咨询一下开课单位 谢谢啦
+      - 请问毛概课的孙宁老师的课序号和课程信息是多少?
+      - 您好，我想请问一下传播学院创新研究学院特色短课 《中英双语短视频报道》的上课时间和上课地点是否有变，按照公文通上的时间来到教室却没有老师来上课？
+      - 请问五一放假的具体安排？本来以为和法定节假日安排一样放五天，没想到...没想到...看以前深大五一还会调课。哭了...要是今年调课那我计划全乱了，而且今年好晚出安排啊！！所以麻烦请问一下五一的具体放假安排。
+      - 《天线技术》课程编号
+      - 2020-2021学年第二学期何业军老师MOOC《天线技术》课程编号怎么查
+      - 您好，我想请问一下查询全校范围内课程上课时间地点的途径，原因是已知途径都不能显示时间地点，听课无门......非常感谢！
+      - 请问大学物理实验（1）课程的开课时间
+      - 中国大学慕课的认证码是多少
+      - 课程信息
+      - 请问假如因为撞课没有领到形势与政策的卷子怎么办 （选的是黄继朝老师，如果是要去办公室拿的话，请问黄继朝老师的办公室在哪）
+      - 想咨询一下选了一门本学院老师开设的创新短课如果在试课以后对课程不满意可以要求退课吗？如果可以的话应该如何申请和操作退课呢？
+      - 壁球课
+      - 错选了一门大一已经修过的课程，“马克思主义中国化与青年使命担当”，申请退课。
+      - 未找到所选mooc的课程，【马克思主义中国化进程与青年学生使命担当】的任课老师是段哲哲，但mooc上没有他的课
+      - 校公选退课
+      - 补选阶段想退确认阶段选的校公选，请问是去找开课单位学院还是本学院？
+      - 新生，第一次如何进入慕课系统查看课程，是否需要注册账号
+      - 课程替换
+      - 关于课程大纲查询
+      - 请问每个课程的课程大纲可以在哪里查到？
+      - 大一上思修的时候做了形势与政策的卷子但是网上没有选上课，之后可以单独补选吗？需要重新选思修的课程吗？
+      - 退课申请
+      - 请问退课申请表是手写吗？还是有固定的格式？在哪里下载呢？
+      - 2019年下半年学校曾经就上课时间进行过修改，请问2020-2021年第一学期的上课时间表是怎么样的？
+      - 慕课办
+      - 请问郑静老师的 家庭治疗【1】的课程编号、课序号是什么呢？
+      - 你好,我想问一下马春晖老师的市场营销学是否有开始上网课,如果已经开课想问一下课程群号
+      - 老师已经答应退课，快两个月了艺术学院的教学秘书还没有回复怎么办
+      - 课程找不到网课
+      - 5300599069[04][理论课] 羽毛球俱乐部(羽毛球俱乐部) 王铮老师的课 我找不到课程群超星学习通课程里也没有 急急急
+      - 退不了课时间冲突
+      - 老师已经同意退课，前几天给体育部教务秘书处发了退课邮件，但是对方没有回应，现在该怎么办？？
+      - 任课老师同意了我的退课申请，然后怎样向教学秘书老师申请退课，我需要教学秘书老师的联系方式？
+      - 能麻烦告知下课程号1401980002【03】袁秋华老师的学习群群号吗，或者上课方式。
+      - 拓展通识课
+      - 去年修的社会问题经济学当时显示是拓展通识课，现在也显示是拓展通识，但现在学业完成查询那里显示没有这门，想问是怎么回事，去年修完差显示是有的
+      - 专业课介绍
+      - 网上评教在哪，点开了教务部找不到评教服务
+      - 想咨询下学校里有没有开设Python和Visio的课程，在全校课表里没有找到
+      - 选修课《唐宋词之美》期末论文要求论文是统一的学校格式，想请问在哪里能够下载学校统一的论文格式？
       - 选课相关问题
       - 需要重修的课落选
       - 我大一的大计挂科了，补考没过，需要大二重修，但是发现预选课时选的大计课程都落选了，怎么办
@@ -203,7 +546,6 @@ nlu:
       - 请问下在选课系统上选了课，但blackboard没显示怎么办
       - 结业生免听
       - 请问结业生如何申请免听？谢谢
-      - 注册
       - 怎么知道自己是否注册了，发现选课那说未注册无法登录，但我刚刚注册完
       - 错过网上评教怎么补？
       - 现在还可以补网上评教吗？不能补的话下学期就无法选课吗？
@@ -214,6 +556,7 @@ nlu:
       - 选课
       - 选不了校公选课和mooc，这两个界面很奇怪，像第一轮抽签结束后的界面，有些课是显示“已满”。点击选择后，说选课容量已满？？现在不是抽签阶段吗，怎么会这样？
       - 免修
+      - 研究生英语免修考试
       - 请问深大有没有免修的相关规定
       - 网上评教
       - 评教己成功提交，但选题系统提示未评教，无法选课
@@ -367,7 +710,6 @@ nlu:
       - 如果慕课选了高数a那么线下高数b是不是不需要上，如果可以，怎么操作
       - 基础日语（2）无法选课
       - 我的大英课程已经替代为日语，需要修基础日语（2），但是却无法选课且选课系统仍然显示大英必修，基础日语（2）是我的必修课程之一也没有出现在方案内。
-      - 如何查询课程是开卷考试还是闭卷考试
       - 如何查询所选课程是开卷考试还是闭卷考试
       - 关于大英考试免听
       - 请问大英考试申请了免听还用参加期末考试吗
@@ -539,6 +881,7 @@ nlu:
       - mooc
       - 关于mooc
       - bb上显示不出作业栏
+      - 前一天看bb还有作业，今天打开发现没有作业栏提交不了作业怎么办？要联系哪个老师解决？（bb负责老师和网络中心办公电话都是空号？）
       - 想知道老生怎么看自己课表啊
       - 关于数金班退班学生的课程疑问
       - 如何查询到老师的课表
@@ -572,6 +915,7 @@ nlu:
       - 退课
       - 学习通
       - 重修大英忘选视听说
+      - 关于高考日语生不修大英转日语
       - 关于未挂科但想重修的问题
       - 合格课程重修
       - 关于重修
@@ -604,6 +948,8 @@ nlu:
       - 网上评教提交显示未提及
       - 错过教师评价时限
       - 教学评价
+      - 体育学分差分，可以用文科选修的分补吗
+      - 品时论史为什么不算在拓展通识课学分呢？
 
 
 
