--- a/data/nlu/hospital.yml
+++ b/data/nlu/hospital.yml
@@ -12,6 +12,21 @@ nlu:
 
   - intent: 校医院/其他
     examples: |
+      - 请问，在深的三天三检的具体要求是什么，是按照日期来连续三天每天做一次核酸，还是做核酸的时间必须间隔24小时？
+      - 加强针疫苗
+      - 请问粤海校区，元平的加强针接种的时间安排是什么呀？
+      - 看往年11月初就确定了，今年还没确定，是因为疫情确认不开了吗？
+      - 请问现在去深圳市外广东省内城市，肇庆市之后回学校需要做核酸检测吗？
+      - 学校什么时候组织第二次新冠疫苗注射呢？
+      - 上个月在校内组织的新冠疫苗注射中成功注射了第一支疫苗，现已过去28天，请问学校什么时候再安排第二次疫苗注射呢？（担心）附资料：我国使用的是哪种新冠疫苗？怎么打？目前使用的是全病毒灭活疫苗。新冠病毒灭活疫苗共接种2剂，每次剂量一般为0.5ml，两针间隔14天到28天。如特殊原因过了28天还没打上，一定尽快完成第二针，这样才能得到完整的全程免疫保护效果。
+      - 疫苗接种
+      - 您好，请问学校疫苗第二针啥时候开始？第一针接种后会感冒发热的能接第二针吗？
+      - 您好，我想问一下就是寒假出省的，但不是中高风险地区的，回来要不要隔离或者做核酸检测呀？
+      - 校内流浪猫疫苗注射
+      - 想知道校内流浪猫具体的疫苗注射时间，今天朋友摸了猫咪后不小心蹭到了我的伤口，我在考虑要不要打狂犬疫苗（因为想近期接种新冠疫苗）
+      - 请问学校有查重的途径吗？
+      - 医疗保险补助
+      - 医疗保险补助通知下发后让我们去签核，现在离签核时间已经过去三个星期了却迟迟没有消息或通知，想知道医疗补助下发还会不会有，时间要在什么时候
       - 校医院相关问题
       - 医保报销
       - 医疗社保报销
