--- a/data/nlu/out_of_scope.yml
+++ b/data/nlu/out_of_scope.yml
@@ -37,6 +37,8 @@ nlu:
 
 - intent: out_of_scope/其他
   examples: |
+    - 换手机号
+    - 换手机号要改在学校填信息留的号码吗，或者要跟老师说一声吗
     - 我问你一个超出范围的问题
     - 4 + 2 = ？
     - 注册后，我看到我的可用余额为0。这个余额代表什么？
